@@ -1,18 +1,19 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.artifact;
 
 import static junit.framework.TestCase.assertTrue;
@@ -24,16 +25,18 @@ import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.impl.BuildPaths;
 import com.facebook.buck.core.rules.analysis.action.ActionAnalysisData;
 import com.facebook.buck.core.rules.analysis.action.ActionAnalysisDataKey;
-import com.facebook.buck.core.rules.analysis.action.ImmutableActionAnalysisDataKey;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.io.filesystem.CopySourceMode;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.TestProjectFilesystems;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.testutil.TemporaryPaths;
 import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.collect.Iterables;
 import com.google.devtools.build.lib.events.Location;
+import com.google.devtools.build.lib.syntax.EvalException;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
@@ -47,6 +50,8 @@ import org.junit.Test;
 public class ArtifactFilesystemTest {
   @Rule public TemporaryPaths tmp = new TemporaryPaths();
   private final FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
+  private final BuildArtifactFactoryForTests artifactFactory =
+      new BuildArtifactFactoryForTests(BuildTargetFactory.newInstance("//test:foo"), filesystem);
 
   @Test
   public void inputStreamOfArtifact() throws IOException {
@@ -63,15 +68,17 @@ public class ArtifactFilesystemTest {
   @Test
   public void outputStreamOfArtifact() throws IOException {
     ArtifactFilesystem artifactFilesystem = new ArtifactFilesystem(filesystem);
+    BuildArtifact artifact =
+        artifactFactory.createBuildArtifact(Paths.get("bar"), Location.BUILTIN);
 
-    OutputStream outputStream =
-        artifactFilesystem.getOutputStream(
-            ImmutableSourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("bar"))));
+    OutputStream outputStream = artifactFilesystem.getOutputStream(artifact);
 
     outputStream.write("foo".getBytes(Charsets.UTF_8));
     outputStream.close();
 
-    assertEquals("foo", Iterables.getOnlyElement(filesystem.readLines(Paths.get("bar"))));
+    assertEquals(
+        "foo",
+        Iterables.getOnlyElement(filesystem.readLines(artifact.getSourcePath().getResolvedPath())));
   }
 
   @Test
@@ -79,25 +86,45 @@ public class ArtifactFilesystemTest {
     ProjectFilesystem filesystem = TestProjectFilesystems.createProjectFilesystem(tmp.getRoot());
 
     ArtifactFilesystem artifactFilesystem = new ArtifactFilesystem(filesystem);
-    ImmutableSourceArtifactImpl artifact =
-        ImmutableSourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("bar")));
+    BuildArtifact artifact =
+        artifactFactory.createBuildArtifact(Paths.get("bar"), Location.BUILTIN);
 
     artifactFilesystem.writeContentsToPath("foobar", artifact);
     artifactFilesystem.makeExecutable(artifact);
 
-    assertEquals("foobar", Iterables.getOnlyElement(filesystem.readLines(Paths.get("bar"))));
-    assertTrue(filesystem.isExecutable(artifact.getSourcePath().getRelativePath()));
+    assertEquals(
+        "foobar",
+        Iterables.getOnlyElement(filesystem.readLines(artifact.getSourcePath().getResolvedPath())));
+    assertTrue(filesystem.isExecutable(artifact.getSourcePath().getResolvedPath()));
   }
 
   @Test
   public void writeContents() throws IOException {
     ArtifactFilesystem artifactFilesystem = new ArtifactFilesystem(filesystem);
-    ImmutableSourceArtifactImpl artifact =
-        ImmutableSourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("bar")));
+    BuildArtifact artifact =
+        artifactFactory.createBuildArtifact(Paths.get("bar"), Location.BUILTIN);
 
     artifactFilesystem.writeContentsToPath("foobar", artifact);
 
-    assertEquals("foobar", Iterables.getOnlyElement(filesystem.readLines(Paths.get("bar"))));
+    assertEquals(
+        "foobar",
+        Iterables.getOnlyElement(filesystem.readLines(artifact.getSourcePath().getResolvedPath())));
+  }
+
+  @Test
+  public void copiesArtifacts() throws IOException {
+    ArtifactFilesystem artifactFilesystem = new ArtifactFilesystem(filesystem);
+    ImmutableSourceArtifactImpl artifact =
+        ImmutableSourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("bar")));
+    filesystem.writeContentsToPath("some contents", Paths.get("bar"));
+
+    BuildArtifact dest = artifactFactory.createBuildArtifact(Paths.get("out"), Location.BUILTIN);
+
+    artifactFilesystem.copy(artifact, dest, CopySourceMode.FILE);
+
+    assertEquals(
+        "some contents",
+        filesystem.readFileIfItExists(dest.getSourcePath().getResolvedPath()).get());
   }
 
   @Test
@@ -119,39 +146,40 @@ public class ArtifactFilesystemTest {
   }
 
   @Test
-  public void createsPackagePathsForOutputs() throws IOException {
+  public void createsPackagePathsForOutputs() throws IOException, EvalException {
     ArtifactFilesystem artifactFilesystem = new ArtifactFilesystem(filesystem);
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
     BuildArtifactFactory factory = new BuildArtifactFactory(buildTarget, filesystem);
     ActionAnalysisDataKey key =
-        ImmutableActionAnalysisDataKey.of(buildTarget, new ActionAnalysisData.ID() {});
+        ActionAnalysisDataKey.of(buildTarget, new ActionAnalysisData.ID("a"));
 
-    ImmutableSet<Artifact> artifacts =
-        ImmutableSet.of(
-            factory
-                .createDeclaredArtifact(Paths.get("out.txt"), Location.BUILTIN)
-                .materialize(key));
+    DeclaredArtifact declaredArtifact =
+        factory.createDeclaredArtifact(Paths.get("out.txt"), Location.BUILTIN);
+    OutputArtifact outputArtifact = declaredArtifact.asOutputArtifact();
+    declaredArtifact.materialize(key);
 
     Path expectedPath = BuildPaths.getGenDir(filesystem, buildTarget);
 
     assertFalse(filesystem.isDirectory(expectedPath));
 
-    artifactFilesystem.createPackagePaths(artifacts);
+    artifactFilesystem.createPackagePaths(ImmutableSortedSet.of(outputArtifact));
 
     assertTrue(filesystem.isDirectory(expectedPath));
   }
 
   @Test
-  public void deletesBuildArtifactsForOutputs() throws IOException {
+  public void deletesBuildArtifactsForOutputs() throws IOException, EvalException {
     ArtifactFilesystem artifactFilesystem = new ArtifactFilesystem(filesystem);
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
 
     BuildArtifactFactory factory = new BuildArtifactFactory(buildTarget, filesystem);
     ActionAnalysisDataKey key =
-        ImmutableActionAnalysisDataKey.of(buildTarget, new ActionAnalysisData.ID() {});
+        ActionAnalysisDataKey.of(buildTarget, new ActionAnalysisData.ID("a"));
 
-    BuildArtifact artifact =
-        factory.createDeclaredArtifact(Paths.get("out.txt"), Location.BUILTIN).materialize(key);
+    DeclaredArtifact declaredArtifact =
+        factory.createDeclaredArtifact(Paths.get("out.txt"), Location.BUILTIN);
+    OutputArtifact outputArtifact = declaredArtifact.asOutputArtifact();
+    BuildArtifact artifact = declaredArtifact.materialize(key);
 
     artifactFilesystem.writeContentsToPath("contents", artifact);
 
@@ -159,7 +187,7 @@ public class ArtifactFilesystemTest {
 
     assertTrue(filesystem.isFile(expectedBuildPath));
 
-    artifactFilesystem.removeBuildArtifacts(ImmutableSet.of(artifact));
+    artifactFilesystem.removeBuildArtifacts(ImmutableSet.of(outputArtifact));
 
     assertFalse(filesystem.isFile(expectedBuildPath));
   }
