@@ -1,26 +1,27 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.files;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.io.watchman.ImmutableWatchmanOverflowEvent;
-import com.facebook.buck.io.watchman.ImmutableWatchmanPathEvent;
+import com.facebook.buck.core.filesystems.AbsPath;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.io.watchman.WatchmanEvent.Kind;
 import com.facebook.buck.io.watchman.WatchmanOverflowEvent;
 import com.facebook.buck.io.watchman.WatchmanPathEvent;
@@ -101,7 +102,7 @@ public class FileTreeCacheTest {
     cache.put(ImmutableFileTreeKey.of(Paths.get("dir1/dir2")), ftree3);
 
     WatchmanPathEvent event =
-        ImmutableWatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("dir1/file2"));
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("dir1/file2")));
     cache.getInvalidator().onFileSystemChange(event);
 
     // all trees up should be invalidated
@@ -130,7 +131,7 @@ public class FileTreeCacheTest {
             ImmutableMap.of()));
 
     WatchmanPathEvent event =
-        ImmutableWatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("file1"));
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("file1")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<FileTree> ftree = cache.get(ImmutableFileTreeKey.of(Paths.get("")));
     assertFalse(ftree.isPresent());
@@ -151,7 +152,7 @@ public class FileTreeCacheTest {
 
     // should not invalidate
     WatchmanPathEvent event =
-        ImmutableWatchmanPathEvent.of(tmp.getRoot(), Kind.MODIFY, Paths.get("file"));
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), Kind.MODIFY, RelPath.of(Paths.get("file")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<FileTree> ftree = cache.get(ImmutableFileTreeKey.of(Paths.get("")));
     assertTrue(ftree.isPresent());
@@ -171,7 +172,7 @@ public class FileTreeCacheTest {
             ImmutableMap.of()));
 
     // should not invalidate
-    WatchmanOverflowEvent event = ImmutableWatchmanOverflowEvent.of(tmp.getRoot(), "Test");
+    WatchmanOverflowEvent event = WatchmanOverflowEvent.of(AbsPath.of(tmp.getRoot()), "Test");
     cache.getInvalidator().onFileSystemChange(event);
     Optional<FileTree> ftree = cache.get(ImmutableFileTreeKey.of(Paths.get("")));
     assertFalse(ftree.isPresent());
