@@ -1,22 +1,24 @@
 /*
- * Copyright 2018-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.model.targetgraph.impl;
 
 import com.facebook.buck.core.exceptions.HumanReadableException;
 import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.google.common.collect.ImmutableSet;
@@ -44,24 +46,23 @@ public class MissingPathsCheckerTest {
     checker.checkPaths(
         new FakeProjectFilesystem(),
         BuildTargetFactory.newInstance("//:a"),
-        ImmutableSet.of(Paths.get("b")));
+        ImmutableSet.of(ForwardRelativePath.of("b")));
   }
 
   @Test
   public void testCheckPathsPassesWithExistingPath() {
     MissingPathsChecker checker = new MissingPathsChecker();
 
-    ImmutableSet<Path> paths = ImmutableSet.of(Paths.get("b"));
-
     checker.checkPaths(
-        new FakeProjectFilesystem(paths), BuildTargetFactory.newInstance("//:a"), paths);
+        new FakeProjectFilesystem(ImmutableSet.of(Paths.get("b"))),
+        BuildTargetFactory.newInstance("//:a"),
+        ImmutableSet.of(ForwardRelativePath.of("b")));
   }
 
   @Test
   public void testCheckPathsThrowsErrorForNonMissingFileErrors() {
-    ImmutableSet<Path> paths = ImmutableSet.of(Paths.get("b"));
     ProjectFilesystem filesystem =
-        new FakeProjectFilesystem(paths) {
+        new FakeProjectFilesystem(ImmutableSet.of(Paths.get("b"))) {
           @Override
           public <A extends BasicFileAttributes> A readAttributes(
               Path pathRelativeToProjectRoot, Class<A> type, LinkOption... options)
@@ -74,6 +75,9 @@ public class MissingPathsCheckerTest {
     thrown.expectMessage("//:a references inaccessible file or directory 'b'");
 
     MissingPathsChecker checker = new MissingPathsChecker();
-    checker.checkPaths(filesystem, BuildTargetFactory.newInstance("//:a"), paths);
+    checker.checkPaths(
+        filesystem,
+        BuildTargetFactory.newInstance("//:a"),
+        ImmutableSet.of(ForwardRelativePath.of("b")));
   }
 }
