@@ -1,30 +1,34 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.parser;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assume.assumeFalse;
 import static org.junit.Assume.assumeTrue;
 
+import com.facebook.buck.core.cell.name.CanonicalCellName;
 import com.facebook.buck.core.graph.transformation.GraphTransformationEngine;
 import com.facebook.buck.core.graph.transformation.executor.impl.DefaultDepsAwareExecutor;
 import com.facebook.buck.core.graph.transformation.impl.DefaultGraphTransformationEngine;
 import com.facebook.buck.core.graph.transformation.impl.GraphComputationStage;
+import com.facebook.buck.core.model.CellRelativePath;
+import com.facebook.buck.core.parser.buildtargetpattern.BuildTargetPattern;
 import com.facebook.buck.core.parser.buildtargetpattern.BuildTargetPattern.Kind;
-import com.facebook.buck.core.parser.buildtargetpattern.ImmutableBuildTargetPattern;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.TestProjectFilesystems;
 import com.facebook.buck.testutil.AssumePath;
@@ -92,7 +96,8 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.createNewFile(Paths.get("dir1/dir2/file"));
     filesystem.mkdirs(Paths.get("dir1/dir2/dir3"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir1/dir2", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir1/dir2", targetName));
 
     assertEquals(ImmutableSortedSet.of(Paths.get("dir1/dir2")), paths.getPackageRoots());
   }
@@ -107,7 +112,8 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.mkdirs(Paths.get("dir1/dir2/dir3"));
     filesystem.createNewFile(Paths.get("dir1/dir2/dir3/BUCK"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", Kind.RECURSIVE, "dir1", ""));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), Kind.RECURSIVE, "dir1", ""));
 
     assertEquals(
         ImmutableSortedSet.of(Paths.get("dir1"), Paths.get("dir1/dir2/dir3")),
@@ -120,7 +126,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, IOException, InterruptedException {
     filesystem.createNewFile(Paths.get("BUCK"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "", targetName));
 
     assertEquals(ImmutableSortedSet.of(Paths.get("")), paths.getPackageRoots());
   }
@@ -134,7 +141,8 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.mkdirs(Paths.get("dir1/dir2"));
     filesystem.createNewFile(Paths.get("dir1/dir2/BUCK"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir1", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir1", targetName));
 
     assertEquals(ImmutableSortedSet.of(Paths.get("dir1")), paths.getPackageRoots());
   }
@@ -145,7 +153,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, IOException, InterruptedException {
     filesystem.mkdirs(Paths.get("dir1/dir2"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir1/dir2", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir1/dir2", targetName));
 
     assertEquals(ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -156,7 +165,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.mkdirs(Paths.get("dir1"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir1", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir1", targetName));
 
     assertEquals(ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -167,7 +177,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.mkdirs(Paths.get("dir1"));
 
-    BuildTargetPatternToBuildPackagePathKey key = key("", kind, "dir1/dir2", targetName);
+    BuildTargetPatternToBuildPackagePathKey key =
+        key(CanonicalCellName.rootCell(), kind, "dir1/dir2", targetName);
 
     thrown.expect(ExecutionException.class);
     thrown.expectCause(IsInstanceOf.instanceOf(NoSuchFileException.class));
@@ -180,7 +191,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.createSymLink(Paths.get("symlink"), Paths.get("target-does-not-exist"), false);
 
-    BuildTargetPatternToBuildPackagePathKey key = key("", kind, "symlink", targetName);
+    BuildTargetPatternToBuildPackagePathKey key =
+        key(CanonicalCellName.rootCell(), kind, "symlink", targetName);
 
     thrown.expect(ExecutionException.class);
     thrown.expectCause(
@@ -196,7 +208,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.createSymLink(Paths.get("symlink"), Paths.get("target-does-not-exist"), false);
 
-    BuildTargetPatternToBuildPackagePathKey key = key("", kind, "symlink/dir", targetName);
+    BuildTargetPatternToBuildPackagePathKey key =
+        key(CanonicalCellName.rootCell(), kind, "symlink/dir", targetName);
 
     thrown.expect(ExecutionException.class);
     thrown.expectCause(IsInstanceOf.instanceOf(NoSuchFileException.class));
@@ -209,7 +222,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.createNewFile(Paths.get("file"));
 
-    BuildTargetPatternToBuildPackagePathKey key = key("", kind, "file", targetName);
+    BuildTargetPatternToBuildPackagePathKey key =
+        key(CanonicalCellName.rootCell(), kind, "file", targetName);
 
     thrown.expect(ExecutionException.class);
     thrown.expectCause(IsInstanceOf.instanceOf(NotDirectoryException.class));
@@ -222,7 +236,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.createNewFile(Paths.get("file"));
 
-    BuildTargetPatternToBuildPackagePathKey key = key("", kind, "file/dir", targetName);
+    BuildTargetPatternToBuildPackagePathKey key =
+        key(CanonicalCellName.rootCell(), kind, "file/dir", targetName);
 
     thrown.expect(ExecutionException.class);
     thrown.expectCause(
@@ -234,15 +249,22 @@ public abstract class AbstractBuildPackageComputationTest {
 
   @Test
   @Parameters(method = "getAnyPathParams")
-  public void ignoresSymlinkBuildFiles(Kind kind, String targetName)
+  public void processesSymlinkBuildFiles(Kind kind, String targetName)
       throws ExecutionException, InterruptedException, IOException {
+
+    // Watchman throws "GetOverlappedResult() failed for read operation" while trying
+    // with symlinks on Windows
+    assumeFalse(isWindows());
+
     filesystem.mkdirs(Paths.get("dir1"));
-    filesystem.createSymLink(Paths.get("dir1/BUCK"), Paths.get("dir1/not-a-build-file"), false);
-    filesystem.createNewFile(Paths.get("dir1/not-a-build-file"));
+    filesystem.mkdirs(Paths.get("dir2"));
+    filesystem.createSymLink(Paths.get("dir1/BUCK"), Paths.get("dir2/BUCK_SYMLINK"), false);
+    filesystem.createNewFile(Paths.get("dir2/BUCK_SYMLINK"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir1", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir1", targetName));
 
-    assertEquals(ImmutableSortedSet.of(), paths.getPackageRoots());
+    assertEquals(ImmutableSortedSet.of(Paths.get("dir1")), paths.getPackageRoots());
   }
 
   @Test
@@ -251,7 +273,8 @@ public abstract class AbstractBuildPackageComputationTest {
       throws ExecutionException, InterruptedException, IOException {
     filesystem.mkdirs(Paths.get("dir1/BUCK"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir1", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir1", targetName));
 
     assertEquals(ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -264,7 +287,8 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.mkdirs(Paths.get("dir"));
     filesystem.createSymLink(Paths.get("dir/symlink-dir"), Paths.get("../target-dir"), true);
 
-    BuildPackagePaths paths = transform("BUCK", key("", Kind.RECURSIVE, "dir", ""));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), Kind.RECURSIVE, "dir", ""));
 
     assertEquals(ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -277,7 +301,9 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.createNewFile(Paths.get("target-dir/sub-dir/BUCK"));
     filesystem.createSymLink(Paths.get("symlink-dir"), Paths.get("target-dir"), true);
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "symlink-dir/sub-dir", targetName));
+    BuildPackagePaths paths =
+        transform(
+            "BUCK", key(CanonicalCellName.rootCell(), kind, "symlink-dir/sub-dir", targetName));
 
     assertEquals(ImmutableSortedSet.of(Paths.get("symlink-dir/sub-dir")), paths.getPackageRoots());
   }
@@ -291,7 +317,8 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.mkdirs(Paths.get("dir"));
     filesystem.createNewFile(Paths.get("dir/BuCk"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir", targetName));
 
     assertEquals(ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -305,7 +332,8 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.mkdirs(Paths.get("dir"));
     filesystem.createNewFile(Paths.get("dir/BuCk"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "dir", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "dir", targetName));
 
     assertEquals(ImmutableSortedSet.of(Paths.get("dir")), paths.getPackageRoots());
   }
@@ -314,12 +342,13 @@ public abstract class AbstractBuildPackageComputationTest {
   @Parameters(method = "getAnyPathParams")
   public void allowsInexactPathCase(Kind kind, String targetName)
       throws ExecutionException, InterruptedException, IOException {
-    AssumePath.assumeNamesAreCaseInsensitive(filesystem.getRootPath());
+    AssumePath.assumeNamesAreCaseInsensitive(filesystem.getRootPath().getPath());
 
     filesystem.mkdirs(Paths.get("dir"));
     filesystem.createNewFile(Paths.get("dir/BUCK"));
 
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "DIR", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "DIR", targetName));
 
     assertEquals(ImmutableSortedSet.of(Paths.get("DIR")), paths.getPackageRoots());
   }
@@ -328,20 +357,20 @@ public abstract class AbstractBuildPackageComputationTest {
   @Parameters(method = "getAnyPathParams")
   public void requiresExactPathCase(Kind kind, String targetName)
       throws ExecutionException, InterruptedException, IOException {
-    AssumePath.assumeNamesAreCaseSensitive(filesystem.getRootPath());
+    AssumePath.assumeNamesAreCaseSensitive(filesystem.getRootPath().getPath());
 
     filesystem.mkdirs(Paths.get("dir"));
     filesystem.createNewFile(Paths.get("dir/BUCK"));
 
     thrown.expect(ExecutionException.class);
     thrown.expectCause(IsInstanceOf.instanceOf(NoSuchFileException.class));
-    transform("BUCK", key("", kind, "DIR", targetName));
+    transform("BUCK", key(CanonicalCellName.rootCell(), kind, "DIR", targetName));
   }
 
   @Test
   public void findsBuildFilesWithSpecialStarGlobCharacter()
       throws ExecutionException, IOException, InterruptedException {
-    AssumePath.assumeStarIsAllowedInNames(filesystem.getRootPath());
+    AssumePath.assumeStarIsAllowedInNames(filesystem.getRootPath().getPath());
 
     filesystem.mkdirs(Paths.get("dir-star"));
     filesystem.createNewFile(Paths.get("dir-star/*UCK"));
@@ -351,17 +380,17 @@ public abstract class AbstractBuildPackageComputationTest {
     BuildPackagePaths paths;
 
     // '*' is special in glob patterns.
-    paths = transform("*UCK", key("", Kind.RECURSIVE, "", ""));
+    paths = transform("*UCK", key(CanonicalCellName.rootCell(), Kind.RECURSIVE, "", ""));
     assertEquals(
         "dir-star/*UCK is the only *UCK build file",
         ImmutableSortedSet.of(Paths.get("dir-star")),
         paths.getPackageRoots());
-    paths = transform("*UCK", key("", Kind.PACKAGE, "dir-star", ""));
+    paths = transform("*UCK", key(CanonicalCellName.rootCell(), Kind.PACKAGE, "dir-star", ""));
     assertEquals(
         "dir-star/*UCK is a *UCK build file",
         ImmutableSortedSet.of(Paths.get("dir-star")),
         paths.getPackageRoots());
-    paths = transform("*UCK", key("", Kind.PACKAGE, "dir-luck", ""));
+    paths = transform("*UCK", key(CanonicalCellName.rootCell(), Kind.PACKAGE, "dir-luck", ""));
     assertEquals(
         "dir-luck/LUCK is not a *UCK build file", ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -369,7 +398,7 @@ public abstract class AbstractBuildPackageComputationTest {
   @Test
   public void findsBuildFilesWithSpecialQuestionGlobCharacter()
       throws ExecutionException, IOException, InterruptedException {
-    AssumePath.assumeQuestionIsAllowedInNames(filesystem.getRootPath());
+    AssumePath.assumeQuestionIsAllowedInNames(filesystem.getRootPath().getPath());
 
     filesystem.mkdirs(Paths.get("dir-question"));
     filesystem.createNewFile(Paths.get("dir-question/?UCK"));
@@ -379,17 +408,17 @@ public abstract class AbstractBuildPackageComputationTest {
     BuildPackagePaths paths;
 
     // '?' is special in glob patterns.
-    paths = transform("?UCK", key("", Kind.RECURSIVE, "", ""));
+    paths = transform("?UCK", key(CanonicalCellName.rootCell(), Kind.RECURSIVE, "", ""));
     assertEquals(
         "dir-star/?UCK is the only ?UCK build file",
         ImmutableSortedSet.of(Paths.get("dir-question")),
         paths.getPackageRoots());
-    paths = transform("?UCK", key("", Kind.PACKAGE, "dir-question", ""));
+    paths = transform("?UCK", key(CanonicalCellName.rootCell(), Kind.PACKAGE, "dir-question", ""));
     assertEquals(
         "dir-star/?UCK is a ?UCK build file",
         ImmutableSortedSet.of(Paths.get("dir-question")),
         paths.getPackageRoots());
-    paths = transform("?UCK", key("", Kind.PACKAGE, "dir-luck", ""));
+    paths = transform("?UCK", key(CanonicalCellName.rootCell(), Kind.PACKAGE, "dir-luck", ""));
     assertEquals(
         "dir-luck/LUCK is not a ?UCK build file", ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -405,17 +434,17 @@ public abstract class AbstractBuildPackageComputationTest {
     BuildPackagePaths paths;
 
     // '[' and ']' are special in glob patterns.
-    paths = transform("[BUCK]", key("", Kind.RECURSIVE, "", ""));
+    paths = transform("[BUCK]", key(CanonicalCellName.rootCell(), Kind.RECURSIVE, "", ""));
     assertEquals(
         "dir-bracket/[BUCK] is the only [BUCK] build file",
         ImmutableSortedSet.of(Paths.get("dir-bracket")),
         paths.getPackageRoots());
-    paths = transform("[BUCK]", key("", Kind.PACKAGE, "dir-bracket", ""));
+    paths = transform("[BUCK]", key(CanonicalCellName.rootCell(), Kind.PACKAGE, "dir-bracket", ""));
     assertEquals(
         "dir-bracket/[BUCK] is a [BUCK] build file",
         ImmutableSortedSet.of(Paths.get("dir-bracket")),
         paths.getPackageRoots());
-    paths = transform("[BUCK]", key("", Kind.PACKAGE, "dir-b", ""));
+    paths = transform("[BUCK]", key(CanonicalCellName.rootCell(), Kind.PACKAGE, "dir-b", ""));
     assertEquals(
         "dir-b/B is not a [BUCK] build file", ImmutableSortedSet.of(), paths.getPackageRoots());
   }
@@ -424,13 +453,14 @@ public abstract class AbstractBuildPackageComputationTest {
   @Parameters(method = "getAnyPathParams")
   public void findsInNamedDirectoryWithSpecialStarGlobCharacters(Kind kind, String targetName)
       throws ExecutionException, IOException, InterruptedException {
-    AssumePath.assumeStarIsAllowedInNames(filesystem.getRootPath());
+    AssumePath.assumeStarIsAllowedInNames(filesystem.getRootPath().getPath());
 
     filesystem.mkdirs(Paths.get("star-d*r"));
     filesystem.createNewFile(Paths.get("star-d*r/BUCK"));
 
     // '*' is special in glob patterns.
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "star-d*r", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "star-d*r", targetName));
     assertEquals(ImmutableSortedSet.of(Paths.get("star-d*r")), paths.getPackageRoots());
   }
 
@@ -438,13 +468,14 @@ public abstract class AbstractBuildPackageComputationTest {
   @Parameters(method = "getAnyPathParams")
   public void findsInNamedDirectoryWithSpecialQuestionGlobCharacters(Kind kind, String targetName)
       throws ExecutionException, IOException, InterruptedException {
-    AssumePath.assumeQuestionIsAllowedInNames(filesystem.getRootPath());
+    AssumePath.assumeQuestionIsAllowedInNames(filesystem.getRootPath().getPath());
 
     filesystem.mkdirs(Paths.get("question-d?r"));
     filesystem.createNewFile(Paths.get("question-d?r/BUCK"));
 
     // '?' is special in glob patterns.
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "question-d?r", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "question-d?r", targetName));
     assertEquals(ImmutableSortedSet.of(Paths.get("question-d?r")), paths.getPackageRoots());
   }
 
@@ -456,15 +487,17 @@ public abstract class AbstractBuildPackageComputationTest {
     filesystem.createNewFile(Paths.get("bracket-[dir]/BUCK"));
 
     // '[' and ']' are special in glob patterns.
-    BuildPackagePaths paths = transform("BUCK", key("", kind, "bracket-[dir]", targetName));
+    BuildPackagePaths paths =
+        transform("BUCK", key(CanonicalCellName.rootCell(), kind, "bracket-[dir]", targetName));
     assertEquals(ImmutableSortedSet.of(Paths.get("bracket-[dir]")), paths.getPackageRoots());
   }
 
   @Nonnull
   public static BuildTargetPatternToBuildPackagePathKey key(
-      String cell, Kind kind, String basePath, String targetName) {
+      CanonicalCellName cell, Kind kind, String basePath, String targetName) {
     return ImmutableBuildTargetPatternToBuildPackagePathKey.of(
-        ImmutableBuildTargetPattern.of(cell, kind, Paths.get(basePath), targetName));
+        BuildTargetPattern.of(
+            CellRelativePath.of(cell, ForwardRelativePath.of(basePath)), kind, targetName));
   }
 
   public BuildPackagePaths transform(
