@@ -1,27 +1,30 @@
 /*
- * Copyright 2012-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.parser.buildtargetparser;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import com.facebook.buck.core.cell.name.CanonicalCellName;
 import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.model.CellRelativePath;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
-import java.nio.file.Paths;
 import org.junit.Test;
 
 public class SubdirectoryBuildTargetMatcherTest {
@@ -31,20 +34,21 @@ public class SubdirectoryBuildTargetMatcherTest {
   @Test
   public void testApply() {
     SubdirectoryBuildTargetMatcher pattern =
-        SubdirectoryBuildTargetMatcher.of(
-            filesystem.getRootPath(), Paths.get("src/com/facebook/buck/"));
+        ImmutableSubdirectoryBuildTargetMatcher.of(
+            CellRelativePath.of(
+                CanonicalCellName.rootCell(), ForwardRelativePath.of("src/com/facebook/buck")));
 
     assertTrue(
         pattern.matches(
-            BuildTargetFactory.newInstance(
-                filesystem.getRootPath(), "//src/com/facebook/buck:buck")));
+            BuildTargetFactory.newInstance("//src/com/facebook/buck:buck")
+                .getUnconfiguredBuildTarget()));
     assertTrue(
         pattern.matches(
-            BuildTargetFactory.newInstance(
-                filesystem.getRootPath(), "//src/com/facebook/buck/bar:bar")));
+            BuildTargetFactory.newInstance("//src/com/facebook/buck/bar:bar")
+                .getUnconfiguredBuildTarget()));
     assertFalse(
         pattern.matches(
-            BuildTargetFactory.newInstance(
-                filesystem.getRootPath(), "//src/com/facebook/foo:foo")));
+            BuildTargetFactory.newInstance("//src/com/facebook/foo:foo")
+                .getUnconfiguredBuildTarget()));
   }
 }
