@@ -1,25 +1,31 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.parser.buildtargetpattern;
 
 import static org.junit.Assert.assertEquals;
 
+import com.facebook.buck.core.cell.name.CanonicalCellName;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
+import com.facebook.buck.core.cell.nameresolver.TestCellNameResolver;
 import com.facebook.buck.core.exceptions.BuildTargetParseException;
+import com.facebook.buck.core.model.CellRelativePath;
 import com.facebook.buck.core.parser.buildtargetpattern.BuildTargetPattern.Kind;
-import java.nio.file.Paths;
+import com.facebook.buck.core.path.ForwardRelativePath;
+import java.util.Optional;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
 import junitparams.naming.TestCaseName;
@@ -31,6 +37,8 @@ import org.junit.runner.RunWith;
 @RunWith(JUnitParamsRunner.class)
 public class BuildTargetPatternParserTest {
 
+  private CellNameResolver cellNameResolver = TestCellNameResolver.forRoot("a", "cell");
+
   @Rule public ExpectedException exception = ExpectedException.none();
 
   @SuppressWarnings("unused")
@@ -38,50 +46,123 @@ public class BuildTargetPatternParserTest {
     return new Object[] {
       new Object[] {
         "cell//path/to:target",
-        ImmutableBuildTargetPattern.of("cell", Kind.SINGLE, Paths.get("path/to"), "target")
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("cell")), ForwardRelativePath.of("path/to")),
+            Kind.SINGLE,
+            "target")
       },
       new Object[] {
         "//path/to:target",
-        ImmutableBuildTargetPattern.of("", Kind.SINGLE, Paths.get("path/to"), "target")
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("path/to")),
+            Kind.SINGLE,
+            "target")
       },
       new Object[] {
-        "//path/to", ImmutableBuildTargetPattern.of("", Kind.SINGLE, Paths.get("path/to"), "to")
+        "//path/to",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("path/to")),
+            Kind.SINGLE,
+            "to")
       },
       new Object[] {
         "cell//path/to",
-        ImmutableBuildTargetPattern.of("cell", Kind.SINGLE, Paths.get("path/to"), "to")
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("cell")), ForwardRelativePath.of("path/to")),
+            Kind.SINGLE,
+            "to")
       },
       new Object[] {
-        "//root", ImmutableBuildTargetPattern.of("", Kind.SINGLE, Paths.get("root"), "root")
+        "//root",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("root")),
+            Kind.SINGLE,
+            "root")
       },
       new Object[] {
-        "//:target", ImmutableBuildTargetPattern.of("", Kind.SINGLE, Paths.get(""), "target")
+        "//:target",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("")),
+            Kind.SINGLE,
+            "target")
       },
       new Object[] {
         "cell//path/to/...",
-        ImmutableBuildTargetPattern.of("cell", Kind.RECURSIVE, Paths.get("path/to"), "")
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("cell")), ForwardRelativePath.of("path/to")),
+            Kind.RECURSIVE,
+            "")
       },
       new Object[] {
         "//path/to/...",
-        ImmutableBuildTargetPattern.of("", Kind.RECURSIVE, Paths.get("path/to"), "")
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("path/to")),
+            Kind.RECURSIVE,
+            "")
       },
-      new Object[] {"//...", ImmutableBuildTargetPattern.of("", Kind.RECURSIVE, Paths.get(""), "")},
       new Object[] {
-        "cell//...", ImmutableBuildTargetPattern.of("cell", Kind.RECURSIVE, Paths.get(""), "")
+        "//...",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("")),
+            Kind.RECURSIVE,
+            "")
       },
       new Object[] {
-        "//path/to:", ImmutableBuildTargetPattern.of("", Kind.PACKAGE, Paths.get("path/to"), "")
+        "cell//...",
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("cell")), ForwardRelativePath.of("")),
+            Kind.RECURSIVE,
+            "")
+      },
+      new Object[] {
+        "//path/to:",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("path/to")),
+            Kind.PACKAGE,
+            "")
       },
       new Object[] {
         "cell//path/to:",
-        ImmutableBuildTargetPattern.of("cell", Kind.PACKAGE, Paths.get("path/to"), "")
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("cell")), ForwardRelativePath.of("path/to")),
+            Kind.PACKAGE,
+            "")
       },
-      new Object[] {"//:", ImmutableBuildTargetPattern.of("", Kind.PACKAGE, Paths.get(""), "")},
       new Object[] {
-        "a//b:c", ImmutableBuildTargetPattern.of("a", Kind.SINGLE, Paths.get("b"), "c")
+        "//:",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("")),
+            Kind.PACKAGE,
+            "")
       },
-      new Object[] {"a//b", ImmutableBuildTargetPattern.of("a", Kind.SINGLE, Paths.get("b"), "b")},
-      new Object[] {"//a", ImmutableBuildTargetPattern.of("", Kind.SINGLE, Paths.get("a"), "a")},
+      new Object[] {
+        "a//b:c",
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("a")), ForwardRelativePath.of("b")),
+            Kind.SINGLE,
+            "c")
+      },
+      new Object[] {
+        "a//b",
+        BuildTargetPattern.of(
+            CellRelativePath.of(
+                CanonicalCellName.unsafeOf(Optional.of("a")), ForwardRelativePath.of("b")),
+            Kind.SINGLE,
+            "b")
+      },
+      new Object[] {
+        "//a",
+        BuildTargetPattern.of(
+            CellRelativePath.of(CanonicalCellName.rootCell(), ForwardRelativePath.of("a")),
+            Kind.SINGLE,
+            "a")
+      },
     };
   }
 
@@ -90,7 +171,7 @@ public class BuildTargetPatternParserTest {
   @TestCaseName("parsingSucceeds({0})")
   public void parsingSucceeds(String pattern, BuildTargetPattern expected)
       throws BuildTargetParseException {
-    assertEquals(expected, BuildTargetPatternParser.parse(pattern));
+    assertEquals(expected, BuildTargetPatternParser.parse(pattern, cellNameResolver));
   }
 
   @Test
@@ -113,6 +194,6 @@ public class BuildTargetPatternParserTest {
   @TestCaseName("parsingFails({0})")
   public void parsingFails(String pattern) throws BuildTargetParseException {
     exception.expect(BuildTargetParseException.class);
-    BuildTargetPatternParser.parse(pattern);
+    BuildTargetPatternParser.parse(pattern, cellNameResolver);
   }
 }
