@@ -1,32 +1,35 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.starlark.rule.attr.impl;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 import com.facebook.buck.core.artifact.Artifact;
-import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.rules.actions.ActionRegistryForTests;
 import com.facebook.buck.core.rules.analysis.impl.FakeBuiltInProvider;
 import com.facebook.buck.core.rules.analysis.impl.FakeInfo;
+import com.facebook.buck.core.rules.analysis.impl.FakeRuleAnalysisContextImpl;
 import com.facebook.buck.core.rules.providers.collect.ProviderInfoCollection;
 import com.facebook.buck.core.rules.providers.collect.impl.ProviderInfoCollectionImpl;
 import com.facebook.buck.core.rules.providers.collect.impl.TestProviderInfoCollectionImpl;
@@ -34,7 +37,9 @@ import com.facebook.buck.core.rules.providers.lib.DefaultInfo;
 import com.facebook.buck.core.rules.providers.lib.ImmutableDefaultInfo;
 import com.facebook.buck.core.starlark.rule.data.SkylarkDependency;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystemFactory;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
+import com.facebook.buck.step.impl.TestActionExecutionRunner;
 import com.google.common.base.VerifyException;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -48,10 +53,16 @@ import org.junit.rules.ExpectedException;
 public class DepListAttributeTest {
 
   private final FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private final CellPathResolver cellRoots = TestCellPathResolver.get(filesystem);
+  private final CellNameResolver cellNameResolver =
+      TestCellPathResolver.get(filesystem).getCellNameResolver();
+  private final TestActionExecutionRunner runner =
+      new TestActionExecutionRunner(
+          new FakeProjectFilesystemFactory(),
+          filesystem,
+          BuildTargetFactory.newInstance("//some:rule"));
 
   private final DepListAttribute attr =
-      new ImmutableDepListAttribute(ImmutableList.of(), "", true, true, ImmutableList.of());
+      ImmutableDepListAttribute.of(ImmutableList.of(), "", true, true, ImmutableList.of());
 
   @Rule public ExpectedException thrown = ExpectedException.none();
 
@@ -62,10 +73,11 @@ public class DepListAttributeTest {
 
     ImmutableList<BuildTarget> coerced =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo/bar:baz"));
 
     assertEquals(expected, coerced);
@@ -75,7 +87,13 @@ public class DepListAttributeTest {
   public void failsMandatoryCoercionProperly() throws CoerceFailedException {
     thrown.expect(CoerceFailedException.class);
 
-    attr.getValue(cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "foo");
+    attr.getValue(
+        cellNameResolver,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        "foo");
   }
 
   @Test
@@ -83,26 +101,28 @@ public class DepListAttributeTest {
     thrown.expect(CoerceFailedException.class);
 
     attr.getValue(
-        cellRoots,
+        cellNameResolver,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of(1));
   }
 
   @Test
   public void failsIfEmptyListProvidedAndNotAllowed() throws CoerceFailedException {
     DepListAttribute attr =
-        new ImmutableDepListAttribute(ImmutableList.of(), "", true, false, ImmutableList.of());
+        ImmutableDepListAttribute.of(ImmutableList.of(), "", true, false, ImmutableList.of());
 
     thrown.expect(CoerceFailedException.class);
     thrown.expectMessage("may not be empty");
 
     attr.getValue(
-        cellRoots,
+        cellNameResolver,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of());
   }
 
@@ -111,10 +131,11 @@ public class DepListAttributeTest {
 
     ImmutableList<BuildTarget> value =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of());
     assertTrue(value.isEmpty());
   }
@@ -124,7 +145,8 @@ public class DepListAttributeTest {
 
     thrown.expect(VerifyException.class);
 
-    attr.getPostCoercionTransform().postCoercionTransform("invalid", ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform("invalid", new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -133,7 +155,8 @@ public class DepListAttributeTest {
     thrown.expect(VerifyException.class);
 
     attr.getPostCoercionTransform()
-        .postCoercionTransform(ImmutableList.of("invalid"), ImmutableMap.of());
+        .postCoercionTransform(
+            ImmutableList.of("invalid"), new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -141,21 +164,23 @@ public class DepListAttributeTest {
 
     ImmutableList<BuildTarget> coerced =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo:bar"));
 
     thrown.expect(NullPointerException.class);
-    attr.getPostCoercionTransform().postCoercionTransform(coerced, ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform(coerced, new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
   public void failsTransformIfMissingRequiredProvider() throws CoerceFailedException {
     FakeBuiltInProvider expectedProvider = new FakeBuiltInProvider("expected");
     DepListAttribute attr =
-        new ImmutableDepListAttribute(
+        ImmutableDepListAttribute.of(
             ImmutableList.of(), "", true, true, ImmutableList.of(expectedProvider));
     FakeBuiltInProvider presentProvider = new FakeBuiltInProvider("present");
 
@@ -163,19 +188,21 @@ public class DepListAttributeTest {
 
     ImmutableList<BuildTarget> coerced =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo:bar"));
 
     thrown.expect(VerifyException.class);
     attr.getPostCoercionTransform()
         .postCoercionTransform(
             coerced,
-            ImmutableMap.of(
-                BuildTargetFactory.newInstance("//foo:bar"),
-                TestProviderInfoCollectionImpl.builder().put(info).build()));
+            new FakeRuleAnalysisContextImpl(
+                ImmutableMap.of(
+                    BuildTargetFactory.newInstance("//foo:bar"),
+                    TestProviderInfoCollectionImpl.builder().put(info).build())));
   }
 
   @Test
@@ -207,14 +234,16 @@ public class DepListAttributeTest {
 
     ImmutableList<BuildTarget> coerced =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo:bar", "//foo:baz"));
 
     List<SkylarkDependency> transformed =
-        attr.getPostCoercionTransform().postCoercionTransform(coerced, deps);
+        attr.getPostCoercionTransform()
+            .postCoercionTransform(coerced, new FakeRuleAnalysisContextImpl(deps));
 
     assertEquals(2, transformed.size());
     assertEquals(
