@@ -1,31 +1,34 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.starlark.rule.attr.impl;
 
 import static org.junit.Assert.assertEquals;
 
 import com.facebook.buck.core.artifact.Artifact;
-import com.facebook.buck.core.artifact.ImmutableSourceArtifactImpl;
 import com.facebook.buck.core.artifact.SourceArtifact;
-import com.facebook.buck.core.cell.CellPathResolver;
+import com.facebook.buck.core.artifact.SourceArtifactImpl;
 import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.rules.actions.ActionRegistryForTests;
+import com.facebook.buck.core.rules.analysis.impl.FakeRuleAnalysisContextImpl;
 import com.facebook.buck.core.rules.providers.collect.ProviderInfoCollection;
 import com.facebook.buck.core.rules.providers.collect.impl.LegacyProviderInfoCollectionImpl;
 import com.facebook.buck.core.rules.providers.collect.impl.ProviderInfoCollectionImpl;
@@ -34,7 +37,9 @@ import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystemFactory;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
+import com.facebook.buck.step.impl.TestActionExecutionRunner;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.devtools.build.lib.syntax.Runtime;
@@ -47,9 +52,15 @@ import org.junit.rules.ExpectedException;
 public class SourceAttributeTest {
 
   private final FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private final CellPathResolver cellRoots = TestCellPathResolver.get(filesystem);
+  private final CellNameResolver cellNameResolver =
+      TestCellPathResolver.get(filesystem).getCellNameResolver();
+  private final TestActionExecutionRunner runner =
+      new TestActionExecutionRunner(
+          new FakeProjectFilesystemFactory(),
+          filesystem,
+          BuildTargetFactory.newInstance("//some:rule"));
 
-  private final SourceAttribute attr = new ImmutableSourceAttribute(Runtime.NONE, "", true);
+  private final SourceAttribute attr = ImmutableSourceAttribute.of(Runtime.NONE, "", true);
 
   @Rule public ExpectedException thrown = ExpectedException.none();
 
@@ -62,13 +73,19 @@ public class SourceAttributeTest {
 
     SourcePath coercedSource =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "foo/bar.cpp");
+            cellNameResolver,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "foo/bar.cpp");
     SourcePath coercedTarget =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "//foo/bar:baz");
 
     assertEquals(expectedSource, coercedSource);
@@ -79,7 +96,13 @@ public class SourceAttributeTest {
   public void failsMandatoryCoercionProperly() throws CoerceFailedException {
     thrown.expect(CoerceFailedException.class);
 
-    attr.getValue(cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, 1);
+    attr.getValue(
+        cellNameResolver,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        1);
   }
 
   @Test
@@ -87,7 +110,12 @@ public class SourceAttributeTest {
     thrown.expect(CoerceFailedException.class);
 
     attr.getValue(
-        cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, Runtime.NONE);
+        cellNameResolver,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        Runtime.NONE);
   }
 
   @Test
@@ -98,10 +126,11 @@ public class SourceAttributeTest {
     String absolutePathString = filesystem.resolve("foo").toAbsolutePath().toString();
 
     attr.getValue(
-        cellRoots,
+        cellNameResolver,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         absolutePathString);
   }
 
@@ -110,7 +139,8 @@ public class SourceAttributeTest {
 
     thrown.expect(IllegalStateException.class);
 
-    attr.getPostCoercionTransform().postCoercionTransform(1, ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform(1, new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -118,7 +148,8 @@ public class SourceAttributeTest {
 
     thrown.expect(IllegalStateException.class);
 
-    attr.getPostCoercionTransform().postCoercionTransform("invalid", ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform("invalid", new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -126,25 +157,37 @@ public class SourceAttributeTest {
 
     SourcePath coerced =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "//foo:bar");
+            cellNameResolver,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "//foo:bar");
 
     thrown.expect(IllegalStateException.class);
-    attr.getPostCoercionTransform().postCoercionTransform(coerced, ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform(coerced, new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
   public void failsTransformIfMissingDefaultInfo() throws CoerceFailedException {
     SourcePath coerced =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "//foo:bar");
+            cellNameResolver,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "//foo:bar");
 
     thrown.expect(IllegalStateException.class);
     attr.getPostCoercionTransform()
         .postCoercionTransform(
             coerced,
-            ImmutableMap.of(
-                BuildTargetFactory.newInstance("//foo:bar"),
-                LegacyProviderInfoCollectionImpl.of()));
+            new FakeRuleAnalysisContextImpl(
+                ImmutableMap.of(
+                    BuildTargetFactory.newInstance("//foo:bar"),
+                    LegacyProviderInfoCollectionImpl.of())));
   }
 
   @Test
@@ -158,11 +201,17 @@ public class SourceAttributeTest {
 
     SourcePath coercedTarget =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "//foo:bar");
+            cellNameResolver,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "//foo:bar");
 
     thrown.expect(IllegalStateException.class);
     thrown.expectMessage("must have exactly one output");
-    attr.getPostCoercionTransform().postCoercionTransform(coercedTarget, deps);
+    attr.getPostCoercionTransform()
+        .postCoercionTransform(coercedTarget, new FakeRuleAnalysisContextImpl(deps));
   }
 
   @Test
@@ -179,11 +228,17 @@ public class SourceAttributeTest {
 
     SourcePath coercedTarget =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "//foo:bar");
+            cellNameResolver,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "//foo:bar");
 
     thrown.expect(IllegalStateException.class);
     thrown.expectMessage("must have exactly one output");
-    attr.getPostCoercionTransform().postCoercionTransform(coercedTarget, deps);
+    attr.getPostCoercionTransform()
+        .postCoercionTransform(coercedTarget, new FakeRuleAnalysisContextImpl(deps));
   }
 
   @Test
@@ -192,7 +247,7 @@ public class SourceAttributeTest {
     ActionRegistryForTests registry = new ActionRegistryForTests(target, filesystem);
     Artifact buildArtifact1 = registry.declareArtifact(Paths.get("baz1"));
     SourceArtifact sourceArtifact =
-        ImmutableSourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("src", "main.cpp")));
+        SourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("src", "main.cpp")));
     ImmutableDefaultInfo defaultInfo =
         new ImmutableDefaultInfo(SkylarkDict.empty(), ImmutableList.of(buildArtifact1));
 
@@ -201,20 +256,28 @@ public class SourceAttributeTest {
 
     SourcePath coercedSource =
         attr.getValue(
-            cellRoots,
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "src/main.cpp");
 
     SourcePath coercedTarget =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "//foo:bar");
+            cellNameResolver,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "//foo:bar");
 
     Object transformedSource =
-        attr.getPostCoercionTransform().postCoercionTransform(coercedSource, deps);
+        attr.getPostCoercionTransform()
+            .postCoercionTransform(coercedSource, new FakeRuleAnalysisContextImpl(deps));
     Object transformedTarget =
-        attr.getPostCoercionTransform().postCoercionTransform(coercedTarget, deps);
+        attr.getPostCoercionTransform()
+            .postCoercionTransform(coercedTarget, new FakeRuleAnalysisContextImpl(deps));
 
     assertEquals(sourceArtifact, transformedSource);
     assertEquals(buildArtifact1, transformedTarget);
