@@ -1,32 +1,35 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.starlark.rule.attr.impl;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 import com.facebook.buck.core.artifact.Artifact;
-import com.facebook.buck.core.artifact.ImmutableSourceArtifactImpl;
 import com.facebook.buck.core.artifact.SourceArtifact;
-import com.facebook.buck.core.cell.CellPathResolver;
+import com.facebook.buck.core.artifact.SourceArtifactImpl;
 import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.rules.actions.ActionRegistryForTests;
+import com.facebook.buck.core.rules.analysis.impl.FakeRuleAnalysisContextImpl;
 import com.facebook.buck.core.rules.providers.collect.ProviderInfoCollection;
 import com.facebook.buck.core.rules.providers.collect.impl.LegacyProviderInfoCollectionImpl;
 import com.facebook.buck.core.rules.providers.collect.impl.ProviderInfoCollectionImpl;
@@ -35,7 +38,9 @@ import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystemFactory;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
+import com.facebook.buck.step.impl.TestActionExecutionRunner;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.devtools.build.lib.syntax.SkylarkDict;
@@ -47,9 +52,16 @@ import org.junit.rules.ExpectedException;
 public class SourceListAttributeTest {
 
   private final FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private final CellPathResolver cellRoots = TestCellPathResolver.get(filesystem);
+  private final CellNameResolver cellRoots =
+      TestCellPathResolver.get(filesystem).getCellNameResolver();
+  private final TestActionExecutionRunner runner =
+      new TestActionExecutionRunner(
+          new FakeProjectFilesystemFactory(),
+          filesystem,
+          BuildTargetFactory.newInstance("//some:rule"));
+
   private final SourceListAttribute attr =
-      new ImmutableSourceListAttribute(ImmutableList.of(), "", true, true);
+      ImmutableSourceListAttribute.of(ImmutableList.of(), "", true, true);
 
   @Rule public ExpectedException thrown = ExpectedException.none();
 
@@ -65,8 +77,9 @@ public class SourceListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("foo/bar.cpp", "//foo/bar:baz"));
 
     assertEquals(expected, coerced);
@@ -76,7 +89,13 @@ public class SourceListAttributeTest {
   public void failsMandatoryCoercionProperly() throws CoerceFailedException {
     thrown.expect(CoerceFailedException.class);
 
-    attr.getValue(cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "foo");
+    attr.getValue(
+        cellRoots,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        "foo");
   }
 
   @Test
@@ -86,8 +105,9 @@ public class SourceListAttributeTest {
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of(1));
   }
 
@@ -96,14 +116,14 @@ public class SourceListAttributeTest {
     thrown.expect(CoerceFailedException.class);
     thrown.expectMessage("may not be empty");
 
-    SourceListAttribute attr =
-        new ImmutableSourceListAttribute(ImmutableList.of(), "", true, false);
+    SourceListAttribute attr = ImmutableSourceListAttribute.of(ImmutableList.of(), "", true, false);
 
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of());
   }
 
@@ -113,8 +133,9 @@ public class SourceListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of());
     assertTrue(value.isEmpty());
   }
@@ -129,8 +150,9 @@ public class SourceListAttributeTest {
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of(absolutePathString));
   }
 
@@ -138,7 +160,8 @@ public class SourceListAttributeTest {
   public void failsTransformIfInvalidCoercedTypeProvided() {
     thrown.expect(IllegalArgumentException.class);
 
-    attr.getPostCoercionTransform().postCoercionTransform("invalid", ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform("invalid", new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -146,7 +169,8 @@ public class SourceListAttributeTest {
     thrown.expect(IllegalStateException.class);
 
     attr.getPostCoercionTransform()
-        .postCoercionTransform(ImmutableList.of("invalid"), ImmutableMap.of());
+        .postCoercionTransform(
+            ImmutableList.of("invalid"), new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -155,12 +179,14 @@ public class SourceListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo:bar", "src/main.cpp"));
 
     thrown.expect(IllegalStateException.class);
-    attr.getPostCoercionTransform().postCoercionTransform(coerced, ImmutableMap.of());
+    attr.getPostCoercionTransform()
+        .postCoercionTransform(coerced, new FakeRuleAnalysisContextImpl(ImmutableMap.of()));
   }
 
   @Test
@@ -169,17 +195,19 @@ public class SourceListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo:bar", "src/main.cpp"));
 
     thrown.expect(IllegalStateException.class);
     attr.getPostCoercionTransform()
         .postCoercionTransform(
             coerced,
-            ImmutableMap.of(
-                BuildTargetFactory.newInstance("//foo:bar"),
-                LegacyProviderInfoCollectionImpl.of()));
+            new FakeRuleAnalysisContextImpl(
+                ImmutableMap.of(
+                    BuildTargetFactory.newInstance("//foo:bar"),
+                    LegacyProviderInfoCollectionImpl.of())));
   }
 
   @Test
@@ -187,12 +215,10 @@ public class SourceListAttributeTest {
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     ActionRegistryForTests registry = new ActionRegistryForTests(target, filesystem);
     Artifact buildArtifact1 = registry.declareArtifact(Paths.get("baz1"));
-    Artifact buildArtifact2 = registry.declareArtifact(Paths.get("baz2"));
     SourceArtifact sourceArtifact =
-        ImmutableSourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("src", "main.cpp")));
+        SourceArtifactImpl.of(PathSourcePath.of(filesystem, Paths.get("src", "main.cpp")));
     ImmutableDefaultInfo defaultInfo =
-        new ImmutableDefaultInfo(
-            SkylarkDict.empty(), ImmutableList.of(buildArtifact1, buildArtifact2));
+        new ImmutableDefaultInfo(SkylarkDict.empty(), ImmutableList.of(buildArtifact1));
 
     ImmutableMap<BuildTarget, ProviderInfoCollection> deps =
         ImmutableMap.of(target, ProviderInfoCollectionImpl.builder().build(defaultInfo));
@@ -201,14 +227,16 @@ public class SourceListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//foo:bar", "src/main.cpp"));
 
-    ImmutableList<Artifact> expected =
-        ImmutableList.of(buildArtifact1, buildArtifact2, sourceArtifact);
+    ImmutableList<Artifact> expected = ImmutableList.of(buildArtifact1, sourceArtifact);
 
-    Object transformed = attr.getPostCoercionTransform().postCoercionTransform(coerced, deps);
+    Object transformed =
+        attr.getPostCoercionTransform()
+            .postCoercionTransform(coerced, new FakeRuleAnalysisContextImpl(deps));
 
     assertEquals(expected, transformed);
   }
