@@ -1,30 +1,31 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.core.starlark.rule.attr.impl;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
 import com.google.common.collect.ImmutableList;
-import java.nio.file.Paths;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -32,10 +33,11 @@ import org.junit.rules.ExpectedException;
 public class StringListAttributeTest {
 
   private final FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private final CellPathResolver cellRoots = TestCellPathResolver.get(filesystem);
+  private final CellNameResolver cellRoots =
+      TestCellPathResolver.get(filesystem).getCellNameResolver();
 
   private final StringListAttribute attr =
-      new ImmutableStringListAttribute(ImmutableList.of("foo"), "", true, true);
+      ImmutableStringListAttribute.of(ImmutableList.of("foo"), "", true, true);
 
   @Rule public ExpectedException thrown = ExpectedException.none();
 
@@ -47,8 +49,9 @@ public class StringListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("foo", "bar"));
 
     assertEquals(expected, coerced);
@@ -58,7 +61,13 @@ public class StringListAttributeTest {
   public void failsMandatoryCoercionProperly() throws CoerceFailedException {
     thrown.expect(CoerceFailedException.class);
 
-    attr.getValue(cellRoots, filesystem, Paths.get(""), EmptyTargetConfiguration.INSTANCE, "foo");
+    attr.getValue(
+        cellRoots,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        "foo");
   }
 
   @Test
@@ -68,15 +77,15 @@ public class StringListAttributeTest {
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of(1));
   }
 
   @Test
   public void failsIfEmptyListProvidedAndNotAllowed() throws CoerceFailedException {
-    StringListAttribute attr =
-        new ImmutableStringListAttribute(ImmutableList.of(), "", true, false);
+    StringListAttribute attr = ImmutableStringListAttribute.of(ImmutableList.of(), "", true, false);
 
     thrown.expect(CoerceFailedException.class);
     thrown.expectMessage("may not be empty");
@@ -84,8 +93,9 @@ public class StringListAttributeTest {
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
-        EmptyTargetConfiguration.INSTANCE,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of());
   }
 
@@ -96,8 +106,9 @@ public class StringListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of());
     assertTrue(value.isEmpty());
   }
