@@ -1,24 +1,27 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.features.python.toolchain;
 
 import static org.junit.Assert.assertEquals;
 
 import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.filesystems.AbsPath;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
 import com.facebook.buck.core.rules.SourcePathRuleFinder;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
@@ -37,10 +40,12 @@ public class PythonEnvironmentTest {
     PythonVersion pythonVersion = PythonVersion.of("python", "pypypy-3");
     Path pythonPath = Paths.get("pypypy");
     Path otherPythonPath = Paths.get("pppyyy");
-    PythonEnvironment environment = new PythonEnvironment(pythonPath, pythonVersion, configSection);
+    PythonEnvironment environment =
+        new PythonEnvironment(
+            pythonPath, pythonVersion, configSection, UnconfiguredTargetConfiguration.INSTANCE);
 
     SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
-    Path root = Paths.get("root");
+    AbsPath root = AbsPath.of(Paths.get("root").toAbsolutePath());
     CellPathResolver cellResolver = TestCellPathResolver.create(root);
     PythonEnvironment reconstructed =
         SerializationTestHelper.serializeAndDeserialize(
