@@ -1,28 +1,32 @@
 /*
- * Copyright 2013-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.io.filesystem.impl;
 
 import static com.facebook.buck.util.string.MoreStrings.withoutSuffix;
 
+import com.facebook.buck.core.cell.name.CanonicalCellName;
+import com.facebook.buck.core.filesystems.AbsPath;
 import com.facebook.buck.io.file.FakeFileAttributes;
 import com.facebook.buck.io.file.MorePaths;
 import com.facebook.buck.io.file.MostFiles;
+import com.facebook.buck.io.filesystem.BuckPaths;
 import com.facebook.buck.io.filesystem.CopySourceMode;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.TestProjectFilesystems;
 import com.facebook.buck.util.environment.Platform;
 import com.facebook.buck.util.sha1.Sha1HashCode;
 import com.facebook.buck.util.timing.Clock;
@@ -89,7 +93,8 @@ import javax.annotation.Nullable;
 public class FakeProjectFilesystem extends DefaultProjectFilesystem {
 
   private static final Random RANDOM = new Random();
-  private static final Path DEFAULT_ROOT = Paths.get(".").toAbsolutePath().normalize();
+  private static final AbsPath DEFAULT_ROOT =
+      AbsPath.of(Paths.get(".").toAbsolutePath()).normalize();
 
   private static final BasicFileAttributes DEFAULT_FILE_ATTRIBUTES =
       new BasicFileAttributes() {
@@ -206,9 +211,9 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
    * @return A project filesystem in a temp directory that will be deleted recursively on jvm exit.
    */
   public static ProjectFilesystem createRealTempFilesystem() {
-    Path tempDir;
+    AbsPath tempDir;
     try {
-      tempDir = Files.createTempDirectory("pfs");
+      tempDir = AbsPath.of(Files.createTempDirectory("pfs"));
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -217,12 +222,12 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
             new Thread(
                 () -> {
                   try {
-                    MostFiles.deleteRecursively(tempDir);
+                    MostFiles.deleteRecursively(tempDir.getPath());
                   } catch (IOException e) { // NOPMD
                     // Swallow. At least we tried, right?
                   }
                 }));
-    return new FakeProjectFilesystem(tempDir);
+    return new FakeProjectFilesystem(CanonicalCellName.rootCell(), tempDir);
   }
 
   public static ProjectFilesystem createJavaOnlyFilesystem() {
@@ -233,22 +238,24 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
     boolean isWindows = Platform.detect() == Platform.WINDOWS;
 
     Configuration configuration = isWindows ? Configuration.windows() : Configuration.unix();
-    rootPath = isWindows ? "C:" + rootPath : rootPath;
+    rootPath = isWindows && !rootPath.startsWith("C:") ? "C:" + rootPath : rootPath;
 
     FileSystem vfs =
         Jimfs.newFileSystem(configuration.toBuilder().setAttributeViews("basic", "posix").build());
 
-    Path root = vfs.getPath(rootPath);
+    AbsPath root = AbsPath.of(vfs.getPath(rootPath));
     try {
-      Files.createDirectories(root);
+      Files.createDirectories(root.getPath());
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
 
     return new DefaultProjectFilesystem(
+        CanonicalCellName.rootCell(),
         root,
-        new DefaultProjectFilesystemDelegate(root),
-        DefaultProjectFilesystemFactory.getWindowsFSInstance()) {
+        new DefaultProjectFilesystemDelegate(root.getPath()),
+        DefaultProjectFilesystemFactory.getWindowsFSInstance(),
+        TestProjectFilesystems.BUCK_OUT_INCLUDE_TARGET_CONFIG_HASH_FOR_TEST) {
       @Override
       public Path resolve(Path path) {
         // Avoid resolving paths from different Java FileSystems.
@@ -257,29 +264,56 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
     };
   }
 
-  public FakeProjectFilesystem() {
-    this(DEFAULT_ROOT);
+  public static ProjectFilesystem createFilesystemWithTargetConfigHashInBuckPaths(
+      boolean buckOutIncludeTargetConfigHash) {
+    AbsPath root = DEFAULT_ROOT;
+    return new DefaultProjectFilesystem(
+        root,
+        ImmutableSet.of(),
+        BuckPaths.createDefaultBuckPaths(
+            CanonicalCellName.rootCell(), root.getPath(), buckOutIncludeTargetConfigHash),
+        new DefaultProjectFilesystemDelegate(root.getPath()),
+        DefaultProjectFilesystemFactory.getWindowsFSInstance());
   }
 
-  public FakeProjectFilesystem(Path root) {
-    this(FakeClock.doNotCare(), root, ImmutableSet.of());
+  public FakeProjectFilesystem() {
+    this(CanonicalCellName.rootCell(), DEFAULT_ROOT);
+  }
+
+  public FakeProjectFilesystem(CanonicalCellName cellName) {
+    this(cellName, DEFAULT_ROOT);
+  }
+
+  public FakeProjectFilesystem(CanonicalCellName cellName, AbsPath root) {
+    this(FakeClock.doNotCare(), cellName, root, ImmutableSet.of());
+  }
+
+  public FakeProjectFilesystem(CanonicalCellName cellName, Path root) {
+    this(cellName, AbsPath.of(root));
   }
 
   public FakeProjectFilesystem(Clock clock) {
-    this(clock, DEFAULT_ROOT, ImmutableSet.of());
+    this(clock, CanonicalCellName.rootCell(), DEFAULT_ROOT, ImmutableSet.of());
   }
 
   public FakeProjectFilesystem(Set<Path> files) {
-    this(FakeClock.doNotCare(), DEFAULT_ROOT, files);
+    this(CanonicalCellName.rootCell(), files);
   }
 
-  public FakeProjectFilesystem(Clock clock, Path root, Set<Path> files) {
+  public FakeProjectFilesystem(CanonicalCellName cellName, Set<Path> files) {
+    this(FakeClock.doNotCare(), cellName, DEFAULT_ROOT, files);
+  }
+
+  public FakeProjectFilesystem(
+      Clock clock, CanonicalCellName cellName, AbsPath root, Set<Path> files) {
     // For testing, we always use a DefaultProjectFilesystemDelegate so that the logic being
     // exercised is always the same, even if a test using FakeProjectFilesystem is used on EdenFS.
     super(
+        cellName,
         root,
-        new DefaultProjectFilesystemDelegate(root),
-        DefaultProjectFilesystemFactory.getWindowsFSInstance());
+        new DefaultProjectFilesystemDelegate(root.getPath()),
+        DefaultProjectFilesystemFactory.getWindowsFSInstance(),
+        TestProjectFilesystems.BUCK_OUT_INCLUDE_TARGET_CONFIG_HASH_FOR_TEST);
     // We use LinkedHashMap to preserve insertion order, so the
     // behavior of this test is consistent across versions. (It also lets
     // us write tests which explicitly test iterating over entries in
@@ -306,6 +340,11 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
 
     // Generally, tests don't care whether files exist.
     ignoreValidityOfPaths = true;
+  }
+
+  @Override
+  public FakeProjectFilesystem clone() throws CloneNotSupportedException {
+    return (FakeProjectFilesystem) super.clone();
   }
 
   @Override
@@ -419,7 +458,7 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
     try (DirectoryStream<Path> directoryStream =
         getDirectoryContentsStream(resolve(pathRelativeToProjectRoot))) {
       return FluentIterable.from(directoryStream)
-          .transform(absolutePath -> relativize(absolutePath))
+          .transform(absolutePath -> relativize(absolutePath).getPath())
           .toSortedList(Comparator.naturalOrder());
     }
   }
@@ -439,7 +478,8 @@ public class FakeProjectFilesystem extends DefaultProjectFilesystem {
                         || (input.isAbsolute() && input.getParent() == null)) {
                       return false;
                     }
-                    return MorePaths.getParentOrEmpty(input).equals(relativize(absolutePath));
+                    return MorePaths.getParentOrEmpty(input)
+                        .equals(relativize(absolutePath).getPath());
                   })
               .transform(FakeProjectFilesystem.this::resolve);
 
