@@ -1,17 +1,17 @@
 /*
- * Copyright 2017-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
@@ -23,8 +23,10 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import com.facebook.buck.core.cell.TestCellPathResolver;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
-import com.facebook.buck.core.util.immutables.BuckStyleImmutable;
+import com.facebook.buck.core.description.arg.DataTransferObject;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
+import com.facebook.buck.core.util.immutables.RuleArg;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.util.ErrorLogger;
 import com.google.common.collect.ImmutableList;
@@ -32,21 +34,20 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.collect.Iterables;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.SortedSet;
-import org.immutables.value.Value;
 import org.junit.Test;
 
 public class BuilderParamInfoTest {
   @Test
   public void failedCoercionIncludesClassAndFieldNames() {
     try {
-      CoercedTypeCache.INSTANCE
-          .getAllParamInfo(new DefaultTypeCoercerFactory(), DtoWithBadField.class)
+      ((TypeCoercerFactory) new DefaultTypeCoercerFactory())
+          .getConstructorArgDescriptor(DtoWithBadField.class)
+          .getParamInfos()
           .values();
       fail("Expected exception.");
     } catch (Exception e) {
@@ -61,9 +62,10 @@ public class BuilderParamInfoTest {
 
   @Test
   public void optionalsForAbstractClass() {
-    for (ParamInfo param :
-        CoercedTypeCache.INSTANCE
-            .getAllParamInfo(new DefaultTypeCoercerFactory(), DtoWithOptionals.class)
+    for (ParamInfo<?> param :
+        ((TypeCoercerFactory) new DefaultTypeCoercerFactory())
+            .getConstructorArgDescriptor(DtoWithOptionals.class)
+            .getParamInfos()
             .values()) {
       assertTrue("Expected param " + param.getName() + " to be optional", param.isOptional());
     }
@@ -71,9 +73,10 @@ public class BuilderParamInfoTest {
 
   @Test
   public void optionalsForInterface() {
-    for (ParamInfo param :
-        CoercedTypeCache.INSTANCE
-            .getAllParamInfo(new DefaultTypeCoercerFactory(), DtoWithOptionalsFromInterface.class)
+    for (ParamInfo<?> param :
+        ((TypeCoercerFactory) new DefaultTypeCoercerFactory())
+            .getConstructorArgDescriptor(DtoWithOptionalsFromInterface.class)
+            .getParamInfos()
             .values()) {
       assertTrue("Expected param " + param.getName() + " to be optional", param.isOptional());
     }
@@ -85,10 +88,11 @@ public class BuilderParamInfoTest {
     FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
     getParamInfo()
         .set(
-            TestCellPathResolver.get(filesystem),
+            TestCellPathResolver.get(filesystem).getCellNameResolver(),
             filesystem,
-            Paths.get("/doesnotexist"),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of("doesnotexist"),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             builder,
             "foo");
     assertEquals("foo", builder.build().getSomeString());
@@ -110,24 +114,23 @@ public class BuilderParamInfoTest {
     assertEquals("some_string", getParamInfo().getPythonName());
   }
 
-  private ParamInfo getParamInfo() {
+  private ParamInfo<?> getParamInfo() {
     return Iterables.getOnlyElement(
-        CoercedTypeCache.INSTANCE
-            .getAllParamInfo(new DefaultTypeCoercerFactory(), DtoWithOneParameter.class)
+        ((TypeCoercerFactory) new DefaultTypeCoercerFactory())
+            .getConstructorArgDescriptor(DtoWithOneParameter.class)
+            .getParamInfos()
             .values());
   }
 
   class BadFieldType {}
 
-  @BuckStyleImmutable
-  @Value.Immutable
-  abstract static class AbstractDtoWithBadField {
+  @RuleArg
+  abstract static class AbstractDtoWithBadField implements DataTransferObject {
     abstract BadFieldType getBadFieldType();
   }
 
-  @BuckStyleImmutable
-  @Value.Immutable
-  abstract static class AbstractDtoWithOptionals {
+  @RuleArg
+  abstract static class AbstractDtoWithOptionals implements DataTransferObject {
     abstract Optional<String> getOptional();
 
     abstract Optional<ImmutableSet<String>> getOptionalImmutableSet();
@@ -149,9 +152,8 @@ public class BuilderParamInfoTest {
     abstract ImmutableMap<String, String> getImmutableMap();
   }
 
-  @BuckStyleImmutable
-  @Value.Immutable
-  interface AbstractDtoWithOptionalsFromInterface {
+  @RuleArg
+  interface AbstractDtoWithOptionalsFromInterface extends DataTransferObject {
     Optional<String> getOptional();
 
     Optional<ImmutableSet<String>> getOptionalImmutableSet();
@@ -173,9 +175,8 @@ public class BuilderParamInfoTest {
     ImmutableMap<String, String> getImmutableMap();
   }
 
-  @BuckStyleImmutable
-  @Value.Immutable
-  abstract static class AbstractDtoWithOneParameter {
+  @RuleArg
+  abstract static class AbstractDtoWithOneParameter implements DataTransferObject {
     abstract String getSomeString();
   }
 }
