@@ -1,17 +1,17 @@
 /*
- * Copyright 2014-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
@@ -20,15 +20,14 @@ import static com.facebook.buck.core.cell.TestCellBuilder.createCellRoots;
 import static org.junit.Assert.assertThat;
 
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
 import com.facebook.buck.core.parser.buildtargetparser.ParsingUnconfiguredBuildTargetViewFactory;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.macros.CppFlagsMacro;
 import com.facebook.buck.rules.macros.LdflagsStaticMacro;
 import com.google.common.collect.ImmutableList;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.regex.Pattern;
 import org.hamcrest.Matchers;
@@ -38,7 +37,7 @@ public class CxxGenruleFilterAndTargetsMacroTypeCoercerTest {
 
   @Test
   public void testNoPattern() throws CoerceFailedException {
-    Path basePath = Paths.get("java/com/facebook/buck/example");
+    ForwardRelativePath basePath = ForwardRelativePath.of("java/com/facebook/buck/example");
     ProjectFilesystem filesystem = new FakeProjectFilesystem();
     CxxGenruleFilterAndTargetsMacroTypeCoercer<CppFlagsMacro> coercer =
         new CxxGenruleFilterAndTargetsMacroTypeCoercer<>(
@@ -51,10 +50,11 @@ public class CxxGenruleFilterAndTargetsMacroTypeCoercerTest {
             CppFlagsMacro::of);
     CppFlagsMacro result =
         coercer.coerce(
-            createCellRoots(filesystem),
+            createCellRoots(filesystem).getCellNameResolver(),
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("//:a"));
     assertThat(
         result,
@@ -65,7 +65,7 @@ public class CxxGenruleFilterAndTargetsMacroTypeCoercerTest {
 
   @Test
   public void testPattern() throws CoerceFailedException {
-    Path basePath = Paths.get("java/com/facebook/buck/example");
+    ForwardRelativePath basePath = ForwardRelativePath.of("java/com/facebook/buck/example");
     ProjectFilesystem filesystem = new FakeProjectFilesystem();
     CxxGenruleFilterAndTargetsMacroTypeCoercer<LdflagsStaticMacro> coercer =
         new CxxGenruleFilterAndTargetsMacroTypeCoercer<>(
@@ -78,10 +78,11 @@ public class CxxGenruleFilterAndTargetsMacroTypeCoercerTest {
             LdflagsStaticMacro::of);
     LdflagsStaticMacro result =
         coercer.coerce(
-            createCellRoots(filesystem),
+            createCellRoots(filesystem).getCellNameResolver(),
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("hello", "//:a"));
     assertThat(result.getFilter().map(Pattern::pattern), Matchers.equalTo(Optional.of("hello")));
     assertThat(
