@@ -1,17 +1,17 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
@@ -21,31 +21,31 @@ import static org.junit.Assert.assertEquals;
 
 import com.facebook.buck.core.linkgroup.CxxLinkGroupMapping;
 import com.facebook.buck.core.linkgroup.CxxLinkGroupMappingTarget;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.google.common.collect.ImmutableList;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.Before;
 import org.junit.Test;
 
 public class CxxLinkGroupMappingCoercerTest {
   private final ProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private final Path basePath = Paths.get("java/com/facebook/buck/example");
+  private final ForwardRelativePath basePath =
+      ForwardRelativePath.of("java/com/facebook/buck/example");
   private CxxLinkGroupMappingCoercer coercer;
 
   public static CxxLinkGroupMappingCoercer buildTypeCoercer(
-      TypeCoercer<CxxLinkGroupMappingTarget> targetTypeCoercer) {
+      TypeCoercer<Object, CxxLinkGroupMappingTarget> targetTypeCoercer) {
     return new CxxLinkGroupMappingCoercer(
         new StringTypeCoercer(), new ListTypeCoercer<>(targetTypeCoercer));
   }
 
   @Before
   public void setUp() {
-    TypeCoercer<CxxLinkGroupMappingTarget.Traversal> traversalCoercer =
+    TypeCoercer<Object, CxxLinkGroupMappingTarget.Traversal> traversalCoercer =
         CxxLinkGroupMappingTargetTraversalCoercerTest.buildTypeCoercer();
-    TypeCoercer<CxxLinkGroupMappingTarget> targetTypeCoercer =
+    TypeCoercer<Object, CxxLinkGroupMappingTarget> targetTypeCoercer =
         CxxLinkGroupMappingTargetCoercerTest.buildTypeCoercer(traversalCoercer);
     coercer = buildTypeCoercer(targetTypeCoercer);
   }
@@ -63,10 +63,11 @@ public class CxxLinkGroupMappingCoercerTest {
 
     CxxLinkGroupMapping mapping =
         coercer.coerce(
-            createCellRoots(filesystem),
+            createCellRoots(filesystem).getCellNameResolver(),
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             linkGroupMap);
 
     assertEquals(mapping.getLinkGroup(), linkGroup);
