@@ -1,28 +1,32 @@
 /*
- * Copyright 2015-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
 
 import static org.junit.Assert.assertEquals;
 
-import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
+import com.facebook.buck.core.filesystems.AbsPath;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.BuildTargetWithOutputs;
+import com.facebook.buck.core.model.OutputLabel;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
 import com.facebook.buck.core.parser.buildtargetparser.ParsingUnconfiguredBuildTargetViewFactory;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
@@ -39,19 +43,20 @@ import org.junit.rules.ExpectedException;
 
 public class SourcePathTypeCoercerTest {
   private FakeProjectFilesystem projectFilesystem;
-  private CellPathResolver cellRoots;
-  private final Path pathRelativeToProjectRoot = Paths.get("");
+  private CellNameResolver cellRoots;
+  private final ForwardRelativePath pathRelativeToProjectRoot = ForwardRelativePath.of("");
   private final SourcePathTypeCoercer sourcePathTypeCoercer =
       new SourcePathTypeCoercer(
-          new BuildTargetTypeCoercer(
-              new UnconfiguredBuildTargetTypeCoercer(
-                  new ParsingUnconfiguredBuildTargetViewFactory())),
+          new BuildTargetWithOutputsTypeCoercer(
+              new UnconfiguredBuildTargetWithOutputsTypeCoercer(
+                  new UnconfiguredBuildTargetTypeCoercer(
+                      new ParsingUnconfiguredBuildTargetViewFactory()))),
           new PathTypeCoercer());
 
   @Before
   public void setUp() {
     projectFilesystem = new FakeProjectFilesystem();
-    cellRoots = TestCellPathResolver.get(projectFilesystem);
+    cellRoots = TestCellPathResolver.get(projectFilesystem).getCellNameResolver();
   }
 
   @Before
@@ -65,67 +70,121 @@ public class SourcePathTypeCoercerTest {
     projectFilesystem.touch(Paths.get(path));
 
     SourcePath sourcePath =
-        sourcePathTypeCoercer.coerce(
+        sourcePathTypeCoercer.coerceBoth(
             cellRoots,
             projectFilesystem,
             pathRelativeToProjectRoot,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             path);
 
     assertEquals(PathSourcePath.of(projectFilesystem, Paths.get(path)), sourcePath);
   }
 
   @Test
+  public void coercePathRelativeToBasePath() throws CoerceFailedException, IOException {
+    projectFilesystem.touch(Paths.get("foo/bar/hello.a"));
+
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerceBoth(
+            cellRoots,
+            projectFilesystem,
+            ForwardRelativePath.of("foo/bar"),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "hello.a");
+
+    assertEquals(PathSourcePath.of(projectFilesystem, Paths.get("foo/bar/hello.a")), sourcePath);
+  }
+
+  @Test
   public void coerceAbsoluteBuildTarget() throws CoerceFailedException {
     SourcePath sourcePath =
-        sourcePathTypeCoercer.coerce(
+        sourcePathTypeCoercer.coerceBoth(
             cellRoots,
             projectFilesystem,
             pathRelativeToProjectRoot,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "//:hello");
 
     assertEquals(
+        DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//:hello")), sourcePath);
+  }
+
+  @Test
+  public void coerceAbsoluteBuildTargetWithOutputLabel() throws CoerceFailedException {
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerceBoth(
+            cellRoots,
+            projectFilesystem,
+            pathRelativeToProjectRoot,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "//:hello[label]");
+
+    assertEquals(
         DefaultBuildTargetSourcePath.of(
-            BuildTargetFactory.newInstance(projectFilesystem, "//:hello")),
+            BuildTargetWithOutputs.of(
+                BuildTargetFactory.newInstance("//:hello"), OutputLabel.of("label"))),
         sourcePath);
   }
 
   @Test
   public void coerceRelativeBuildTarget() throws CoerceFailedException {
     SourcePath sourcePath =
-        sourcePathTypeCoercer.coerce(
+        sourcePathTypeCoercer.coerceBoth(
             cellRoots,
             projectFilesystem,
             pathRelativeToProjectRoot,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ":hello");
 
     assertEquals(
+        DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//:hello")), sourcePath);
+  }
+
+  @Test
+  public void coerceRelativeBuildTargetWithOutputLabel() throws CoerceFailedException {
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerceBoth(
+            cellRoots,
+            projectFilesystem,
+            pathRelativeToProjectRoot,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            ":hello[label]");
+
+    assertEquals(
         DefaultBuildTargetSourcePath.of(
-            BuildTargetFactory.newInstance(projectFilesystem, "//:hello")),
+            BuildTargetWithOutputs.of(
+                BuildTargetFactory.newInstance("//:hello"), OutputLabel.of("label"))),
         sourcePath);
   }
 
   @Test
   public void coerceCrossRepoBuildTarget() throws CoerceFailedException {
-    Path rootPath = projectFilesystem.getRootPath();
-    Path helloRoot = rootPath.resolve("hello");
-    cellRoots = TestCellPathResolver.create(rootPath, ImmutableMap.of("hello", helloRoot));
+    AbsPath rootPath = projectFilesystem.getRootPath();
+    AbsPath helloRoot = rootPath.resolve("hello");
+    cellRoots =
+        TestCellPathResolver.create(rootPath, ImmutableMap.of("hello", helloRoot.getPath()))
+            .getCellNameResolver();
 
     SourcePath sourcePath =
-        sourcePathTypeCoercer.coerce(
+        sourcePathTypeCoercer.coerceBoth(
             cellRoots,
             projectFilesystem,
             pathRelativeToProjectRoot,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "hello//:hello");
 
     // Note that the important thing is that the root of the target has been set to `helloRoot` so
     // the cell name should be absent (otherwise, we'd look for a cell named `@hello` from the
     // `@hello` cell. Yeah. My head hurts a little too.
     assertEquals(
-        DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance(helloRoot, "hello//:hello")),
+        DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("hello//:hello")),
         sourcePath);
   }
 
@@ -135,13 +194,14 @@ public class SourcePathTypeCoercerTest {
     projectFilesystem.touch(path);
 
     exception.expect(CoerceFailedException.class);
-    exception.expectMessage("SourcePath cannot contain an absolute path");
+    exception.expectMessage("Path cannot contain an absolute path");
 
-    sourcePathTypeCoercer.coerce(
+    sourcePathTypeCoercer.coerceBoth(
         cellRoots,
         projectFilesystem,
         pathRelativeToProjectRoot,
-        EmptyTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         path.toString());
   }
 }
