@@ -1,17 +1,17 @@
 /*
- * Copyright 2017-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
@@ -21,10 +21,11 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
 import com.facebook.buck.core.model.TargetConfiguration;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.coercer.TypeCoercer.Traversal;
@@ -34,9 +35,6 @@ import com.facebook.buck.rules.macros.StringWithMacros;
 import com.facebook.buck.rules.macros.StringWithMacrosUtils;
 import com.facebook.buck.util.types.Either;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import org.hamcrest.Matchers;
@@ -48,20 +46,21 @@ public class StringWithMacrosTypeCoercerTest {
 
   @Rule public ExpectedException thrown = ExpectedException.none();
 
-  private static final ProjectFilesystem FILESYSTEM = new FakeProjectFilesystem();
-  private static final CellPathResolver CELL_PATH_RESOLVER = TestCellPathResolver.get(FILESYSTEM);
-  private static final Path BASE_PATH = Paths.get("");
+  private final ProjectFilesystem filesystem = new FakeProjectFilesystem();
+  private final CellNameResolver cellNameResolver =
+      TestCellPathResolver.get(filesystem).getCellNameResolver();
+  private final ForwardRelativePath basePath = ForwardRelativePath.of("");
 
   @Test
   public void plainString() throws CoerceFailedException {
-    StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(ImmutableMap.of(), ImmutableList.of());
+    StringWithMacrosTypeCoercer coercer = StringWithMacrosTypeCoercer.builder().build();
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "test string"),
         Matchers.equalTo(StringWithMacrosUtils.format("test string")));
   }
@@ -69,43 +68,48 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void embeddedMacro() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string with $(test arg) macro"),
         Matchers.equalTo(
             StringWithMacrosUtils.format(
                 "string with %s macro", new TestMacro(ImmutableList.of("arg")))));
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string with $(test arg)"),
         Matchers.equalTo(
             StringWithMacrosUtils.format(
                 "string with %s", new TestMacro(ImmutableList.of("arg")))));
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg) macro"),
         Matchers.equalTo(
             StringWithMacrosUtils.format("%s macro", new TestMacro(ImmutableList.of("arg")))));
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg)"),
         Matchers.equalTo(
             StringWithMacrosUtils.format("%s", new TestMacro(ImmutableList.of("arg")))));
@@ -114,67 +118,73 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void failedMacroNotFound() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
     thrown.expect(CoerceFailedException.class);
     thrown.expectMessage(
         containsString("Macro 'testnotfound' not found when expanding '$(testnotfound arg)'"));
     coercer.coerce(
-        CELL_PATH_RESOLVER,
-        FILESYSTEM,
-        BASE_PATH,
-        EmptyTargetConfiguration.INSTANCE,
+        cellNameResolver,
+        filesystem,
+        basePath,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         "string with $(testnotfound arg) macro");
   }
 
   @Test
   public void failedMacroArgument() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class),
-            ImmutableList.of(new TestFailMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestFailMacroTypeCoercer())
+            .build();
     thrown.expect(CoerceFailedException.class);
     thrown.expectMessage(containsString("The macro '$(test arg)' could not be expanded:\nfailed"));
     coercer.coerce(
-        CELL_PATH_RESOLVER,
-        FILESYSTEM,
-        BASE_PATH,
-        EmptyTargetConfiguration.INSTANCE,
+        cellNameResolver,
+        filesystem,
+        basePath,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         "string with $(test arg) macro");
   }
 
   @Test
   public void multipleMacros() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of(
-                "test1", TestMacro.class,
-                "test2", TestMacro.class),
-            ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test1", TestMacro.class, new TestMacroTypeCoercer())
+            .put("test2", Test2Macro.class, new Test2MacroTypeCoercer())
+            .build();
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "first $(test1 arg1) second $(test2 arg2)"),
         Matchers.equalTo(
             StringWithMacrosUtils.format(
                 "first %s second %s",
-                new TestMacro(ImmutableList.of("arg1")), new TestMacro(ImmutableList.of("arg2")))));
+                new TestMacro(ImmutableList.of("arg1")),
+                new Test2Macro(ImmutableList.of("arg2")))));
   }
 
   @Test
   public void outputToFile() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string with $(@test arg) macro"),
         Matchers.equalTo(
             StringWithMacrosUtils.format(
@@ -185,14 +195,16 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void escaping() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
     assertThat(
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string with \\$(test arg) macro"),
         Matchers.equalTo(
             StringWithMacros.of(
@@ -205,71 +217,81 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void testConcatCombinesStrings() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
 
     StringWithMacros string1 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string with $(test arg) macro");
     StringWithMacros string2 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             " + another string with $(test arg) macro");
     StringWithMacros string3 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             " + string");
     StringWithMacros string4 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             " + string + $(test arg)");
     StringWithMacros string5 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg)");
     StringWithMacros string6 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "+ string");
     StringWithMacros string7 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg)");
     StringWithMacros string8 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "+ another string");
     StringWithMacros result =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string with $(test arg) macro + another string with $(test arg) macro"
                 + " + string + string + $(test arg)$(test arg)+ string$(test arg)+ another string");
 
@@ -282,29 +304,33 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void testConcatCombinesTwoStrings() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
 
     StringWithMacros string1 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string1");
     StringWithMacros string2 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string2");
     StringWithMacros result =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string1string2");
 
     assertEquals(result, coercer.concat(Arrays.asList(string1, string2)));
@@ -313,22 +339,25 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void testConcatOfOneStringReturnsTheSameString() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
 
     StringWithMacros string1 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string1");
     StringWithMacros result =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string1");
 
     assertEquals(result, coercer.concat(Collections.singleton(string1)));
@@ -336,12 +365,11 @@ public class StringWithMacrosTypeCoercerTest {
 
   @Test
   public void testConcatOfEmptyStringReturnsEmptyString() {
-    StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(ImmutableMap.of(), ImmutableList.of());
+    StringWithMacrosTypeCoercer coercer = StringWithMacrosTypeCoercer.builder().build();
 
     assertTrue(
         coercer
-            .concat(Collections.singleton(StringWithMacros.of(ImmutableList.of())))
+            .concat(Collections.singleton(StringWithMacros.ofConstantString("")))
             .getParts()
             .isEmpty());
   }
@@ -349,36 +377,41 @@ public class StringWithMacrosTypeCoercerTest {
   @Test
   public void testConcatCombinesStringInTheMiddle() throws CoerceFailedException {
     StringWithMacrosTypeCoercer coercer =
-        StringWithMacrosTypeCoercer.from(
-            ImmutableMap.of("test", TestMacro.class), ImmutableList.of(new TestMacroTypeCoercer()));
+        StringWithMacrosTypeCoercer.builder()
+            .put("test", TestMacro.class, new TestMacroTypeCoercer())
+            .build();
 
     StringWithMacros string1 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg) string1");
     StringWithMacros string2 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "string2");
     StringWithMacros string3 =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg)");
     StringWithMacros result =
         coercer.coerce(
-            CELL_PATH_RESOLVER,
-            FILESYSTEM,
-            BASE_PATH,
-            EmptyTargetConfiguration.INSTANCE,
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(test arg) string1string2$(test arg)");
 
     assertEquals(result, coercer.concat(Arrays.asList(string1, string2, string3)));
@@ -407,6 +440,43 @@ public class StringWithMacrosTypeCoercerTest {
     }
 
     @Override
+    public Class<? extends Macro> getMacroClass() {
+      return TestMacro.class;
+    }
+
+    @Override
+    public int hashCode() {
+      return args.hashCode();
+    }
+  }
+
+  static class Test2Macro implements Macro {
+    private final ImmutableList<String> args;
+
+    Test2Macro(ImmutableList<String> args) {
+      this.args = args;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+      if (this == o) {
+        return true;
+      }
+      if (o == null || getClass() != o.getClass()) {
+        return false;
+      }
+
+      Test2Macro testMacro = (Test2Macro) o;
+
+      return args.equals(testMacro.args);
+    }
+
+    @Override
+    public Class<? extends Macro> getMacroClass() {
+      return TestMacro.class;
+    }
+
+    @Override
     public int hashCode() {
       return args.hashCode();
     }
@@ -425,16 +495,44 @@ public class StringWithMacrosTypeCoercerTest {
     }
 
     @Override
-    public void traverse(CellPathResolver cellRoots, TestMacro macro, Traversal traversal) {}
+    public void traverse(CellNameResolver cellRoots, TestMacro macro, Traversal traversal) {}
 
     @Override
     public TestMacro coerce(
-        CellPathResolver cellRoots,
+        CellNameResolver cellNameResolver,
         ProjectFilesystem filesystem,
-        Path pathRelativeToProjectRoot,
+        ForwardRelativePath pathRelativeToProjectRoot,
         TargetConfiguration targetConfiguration,
+        TargetConfiguration hostConfiguration,
         ImmutableList<String> args) {
       return new TestMacro(args);
+    }
+  }
+
+  static class Test2MacroTypeCoercer implements MacroTypeCoercer<Test2Macro> {
+
+    @Override
+    public boolean hasElementClass(Class<?>[] types) {
+      return false;
+    }
+
+    @Override
+    public Class<Test2Macro> getOutputClass() {
+      return Test2Macro.class;
+    }
+
+    @Override
+    public void traverse(CellNameResolver cellRoots, Test2Macro macro, Traversal traversal) {}
+
+    @Override
+    public Test2Macro coerce(
+        CellNameResolver cellNameResolver,
+        ProjectFilesystem filesystem,
+        ForwardRelativePath pathRelativeToProjectRoot,
+        TargetConfiguration targetConfiguration,
+        TargetConfiguration hostConfiguration,
+        ImmutableList<String> args) {
+      return new Test2Macro(args);
     }
   }
 
@@ -451,14 +549,15 @@ public class StringWithMacrosTypeCoercerTest {
     }
 
     @Override
-    public void traverse(CellPathResolver cellRoots, TestMacro macro, Traversal traversal) {}
+    public void traverse(CellNameResolver cellRoots, TestMacro macro, Traversal traversal) {}
 
     @Override
     public TestMacro coerce(
-        CellPathResolver cellRoots,
+        CellNameResolver cellNameResolver,
         ProjectFilesystem filesystem,
-        Path pathRelativeToProjectRoot,
+        ForwardRelativePath pathRelativeToProjectRoot,
         TargetConfiguration targetConfiguration,
+        TargetConfiguration hostConfiguration,
         ImmutableList<String> args)
         throws CoerceFailedException {
       throw new CoerceFailedException("failed");
