@@ -1,34 +1,33 @@
 /*
- * Copyright 2019-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.rules.coercer;
 
 import static org.junit.Assert.assertEquals;
 
-import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
-import com.facebook.buck.core.test.rule.ImmutableTestRunnerSpec;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.test.rule.TestRunnerSpec;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.macros.StringWithMacrosUtils;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -38,33 +37,38 @@ public class TestRunnerSpecCoercerTest {
   @Rule public ExpectedException expectedException = ExpectedException.none();
 
   private final StringWithMacrosTypeCoercer stringWithMacrosTypeCoercer =
-      StringWithMacrosTypeCoercer.from(
-          ImmutableMap.of("test", StringWithMacrosTypeCoercerTest.TestMacro.class),
-          ImmutableList.of(new StringWithMacrosTypeCoercerTest.TestMacroTypeCoercer()));;
+      StringWithMacrosTypeCoercer.builder()
+          .put(
+              "test",
+              StringWithMacrosTypeCoercerTest.TestMacro.class,
+              new StringWithMacrosTypeCoercerTest.TestMacroTypeCoercer())
+          .build();
 
   private final TestRunnerSpecCoercer coercer =
       new TestRunnerSpecCoercer(stringWithMacrosTypeCoercer);
 
   private final ProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private final CellPathResolver cellPathResolver = TestCellPathResolver.get(filesystem);
-  private final Path basePath = Paths.get("");
+  private final CellNameResolver cellNameResolver =
+      TestCellPathResolver.get(filesystem).getCellNameResolver();
+  private final ForwardRelativePath basePath = ForwardRelativePath.of("");
 
   @Test
   public void coerceMapWithMacros() throws CoerceFailedException {
     TestRunnerSpec spec =
         coercer.coerce(
-            cellPathResolver,
+            cellNameResolver,
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableMap.of("$(test arg)", "foo"));
 
     assertEquals(
-        ImmutableTestRunnerSpec.of(
+        TestRunnerSpec.of(
             ImmutableMap.of(
                 StringWithMacrosUtils.format(
                     "%s", new StringWithMacrosTypeCoercerTest.TestMacro(ImmutableList.of("arg"))),
-                ImmutableTestRunnerSpec.of(StringWithMacrosUtils.format("foo")))),
+                TestRunnerSpec.of(StringWithMacrosUtils.format("foo")))),
         spec);
   }
 
@@ -72,20 +76,21 @@ public class TestRunnerSpecCoercerTest {
   public void coerceListWithMacros() throws CoerceFailedException {
     TestRunnerSpec spec =
         coercer.coerce(
-            cellPathResolver,
+            cellNameResolver,
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("$(test arg)", "foo"));
 
     assertEquals(
-        ImmutableTestRunnerSpec.of(
+        TestRunnerSpec.of(
             ImmutableList.of(
-                ImmutableTestRunnerSpec.of(
+                TestRunnerSpec.of(
                     StringWithMacrosUtils.format(
                         "%s",
                         new StringWithMacrosTypeCoercerTest.TestMacro(ImmutableList.of("arg")))),
-                ImmutableTestRunnerSpec.of(StringWithMacrosUtils.format("foo")))),
+                TestRunnerSpec.of(StringWithMacrosUtils.format("foo")))),
         spec);
   }
 
@@ -93,20 +98,21 @@ public class TestRunnerSpecCoercerTest {
   public void coerceNestedWithMacros() throws CoerceFailedException {
     TestRunnerSpec spec =
         coercer.coerce(
-            cellPathResolver,
+            cellNameResolver,
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableMap.of("a", ImmutableList.of("foo", "some $(test arg2)")));
 
     assertEquals(
-        ImmutableTestRunnerSpec.of(
+        TestRunnerSpec.of(
             ImmutableMap.of(
                 StringWithMacrosUtils.format("a"),
-                ImmutableTestRunnerSpec.of(
+                TestRunnerSpec.of(
                     ImmutableList.of(
-                        ImmutableTestRunnerSpec.of(StringWithMacrosUtils.format("foo")),
-                        ImmutableTestRunnerSpec.of(
+                        TestRunnerSpec.of(StringWithMacrosUtils.format("foo")),
+                        TestRunnerSpec.of(
                             StringWithMacrosUtils.format(
                                 "some %s",
                                 new StringWithMacrosTypeCoercerTest.TestMacro(
@@ -118,19 +124,41 @@ public class TestRunnerSpecCoercerTest {
   public void coerceNumbers() throws CoerceFailedException {
     TestRunnerSpec spec =
         coercer.coerce(
-            cellPathResolver,
+            cellNameResolver,
             filesystem,
             basePath,
-            EmptyTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableMap.of("a", 1.0, "b", 2));
 
     assertEquals(
-        ImmutableTestRunnerSpec.of(
+        TestRunnerSpec.of(
             ImmutableMap.of(
                 StringWithMacrosUtils.format("a"),
-                ImmutableTestRunnerSpec.of(1.0),
+                TestRunnerSpec.of(1.0),
                 StringWithMacrosUtils.format("b"),
-                ImmutableTestRunnerSpec.of(2))),
+                TestRunnerSpec.of(2))),
+        spec);
+  }
+
+  @Test
+  public void coerceBooleans() throws CoerceFailedException {
+    TestRunnerSpec spec =
+        coercer.coerce(
+            cellNameResolver,
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            ImmutableMap.of("bb", true, "bby", false));
+
+    assertEquals(
+        TestRunnerSpec.of(
+            ImmutableMap.of(
+                StringWithMacrosUtils.format("bb"),
+                TestRunnerSpec.of(true),
+                StringWithMacrosUtils.format("bby"),
+                TestRunnerSpec.of(false))),
         spec);
   }
 
@@ -139,10 +167,11 @@ public class TestRunnerSpecCoercerTest {
     expectedException.expect(CoerceFailedException.class);
 
     coercer.coerce(
-        cellPathResolver,
+        cellNameResolver,
         filesystem,
         basePath,
-        EmptyTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableMap.of(ImmutableList.of(), "foo"));
   }
 
@@ -151,10 +180,11 @@ public class TestRunnerSpecCoercerTest {
     expectedException.expect(CoerceFailedException.class);
 
     coercer.coerce(
-        cellPathResolver,
+        cellNameResolver,
         filesystem,
         basePath,
-        EmptyTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableMap.of(1, "foo"));
   }
 }
