@@ -1,17 +1,17 @@
 /*
- * Copyright 2014-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.macros;
@@ -20,14 +20,18 @@ import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.containsString;
 import static org.junit.Assert.assertEquals;
 
-import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellBuilder;
+import com.facebook.buck.core.cell.nameresolver.CellNameResolver;
 import com.facebook.buck.core.exceptions.HumanReadableException;
+import com.facebook.buck.core.macros.MacroException;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.OutputLabel;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.impl.PathReferenceRuleWithMultipleOutputs;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
@@ -36,8 +40,13 @@ import com.facebook.buck.jvm.java.JavaLibraryBuilder;
 import com.facebook.buck.rules.args.Arg;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
 import com.facebook.buck.rules.coercer.DefaultTypeCoercerFactory;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.reflect.TypeToken;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.hamcrest.Matchers;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -48,19 +57,18 @@ public class LocationMacroExpanderTest {
 
   private ProjectFilesystem filesystem;
   private ActionGraphBuilder graphBuilder;
-  private CellPathResolver cellPathResolver;
+  private CellNameResolver cellNameResolver;
   private StringWithMacrosConverter converter;
 
   private ActionGraphBuilder setup(ProjectFilesystem projectFilesystem, BuildTarget buildTarget) {
-    cellPathResolver = TestCellBuilder.createCellRoots(projectFilesystem);
+    cellNameResolver = TestCellBuilder.createCellRoots(projectFilesystem).getCellNameResolver();
     graphBuilder = new TestActionGraphBuilder();
     converter =
-        StringWithMacrosConverter.builder()
-            .setBuildTarget(buildTarget)
-            .setCellPathResolver(cellPathResolver)
-            .setActionGraphBuilder(graphBuilder)
-            .addExpanders(new LocationMacroExpander())
-            .build();
+        StringWithMacrosConverter.of(
+            buildTarget,
+            cellNameResolver,
+            graphBuilder,
+            ImmutableList.of(LocationMacroExpander.INSTANCE));
     return graphBuilder;
   }
 
@@ -108,7 +116,7 @@ public class LocationMacroExpanderTest {
   @Test
   public void replaceSupplementalOutputLocation() throws Exception {
     filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
-    BuildTarget buildTarget = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//foo:bar");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
     graphBuilder = setup(filesystem, buildTarget);
     BuildRule rule = new RuleWithSupplementaryOutput(buildTarget, filesystem);
     graphBuilder.addToIndex(rule);
@@ -120,9 +128,67 @@ public class LocationMacroExpanderTest {
   }
 
   @Test
+  public void replaceOutputLabelOutputLocation() throws Exception {
+    filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
+    graphBuilder = setup(filesystem, buildTarget);
+    BuildRule rule =
+        new PathReferenceRuleWithMultipleOutputs(
+            buildTarget,
+            filesystem,
+            Paths.get("incorrect"),
+            ImmutableMap.of(OutputLabel.of("label"), ImmutableSet.of(Paths.get("pathpathpath"))));
+    graphBuilder.addToIndex(rule);
+
+    String transformedString = coerceAndStringify("$(location //foo:bar[label])", rule);
+
+    assertEquals(filesystem.getRootPath().resolve("pathpathpath").toString(), transformedString);
+  }
+
+  @Test
+  public void throwsExceptionWhenCannotFindNamedOutputs() throws Exception {
+    thrown.expect(HumanReadableException.class);
+    thrown.expectCause(Matchers.instanceOf(MacroException.class));
+    thrown.expectMessage(
+        "//foo:bar used in location macro does not produce outputs with label [nonexistent]");
+
+    filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
+    graphBuilder = setup(filesystem, buildTarget);
+    BuildRule rule =
+        new PathReferenceRuleWithMultipleOutputs(
+            buildTarget, filesystem, Paths.get("incorrect"), ImmutableMap.of());
+    graphBuilder.addToIndex(rule);
+
+    coerceAndStringify("$(location //foo:bar[nonexistent])", rule);
+  }
+
+  @Test
+  public void throwsExceptionWhenRetrieveMultipleOutputs() throws Exception {
+    thrown.expect(HumanReadableException.class);
+    thrown.expectCause(Matchers.instanceOf(MacroException.class));
+    thrown.expectMessage(
+        "//foo:bar[label] produces multiple outputs but location macro accepts only one output");
+
+    filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
+    graphBuilder = setup(filesystem, buildTarget);
+    BuildRule rule =
+        new PathReferenceRuleWithMultipleOutputs(
+            buildTarget,
+            filesystem,
+            Paths.get("incorrect"),
+            ImmutableMap.of(
+                OutputLabel.of("label"), ImmutableSet.of(Paths.get("path1"), Paths.get("path2"))));
+    graphBuilder.addToIndex(rule);
+
+    coerceAndStringify("$(location //foo:bar[label])", rule);
+  }
+
+  @Test
   public void missingLocationArgumentThrows() throws Exception {
     filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
-    cellPathResolver = TestCellBuilder.createCellRoots(filesystem);
+    cellNameResolver = TestCellBuilder.createCellRoots(filesystem).getCellNameResolver();
 
     thrown.expect(CoerceFailedException.class);
     thrown.expectMessage(
@@ -131,26 +197,27 @@ public class LocationMacroExpanderTest {
             containsString("expected exactly one argument (found 1)")));
 
     new DefaultTypeCoercerFactory()
-        .typeCoercerForType(StringWithMacros.class)
-        .coerce(
-            cellPathResolver,
+        .typeCoercerForType(TypeToken.of(StringWithMacros.class))
+        .coerceBoth(
+            cellNameResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(location )");
   }
 
   private String coerceAndStringify(String input, BuildRule rule) throws CoerceFailedException {
     StringWithMacros stringWithMacros =
-        (StringWithMacros)
-            new DefaultTypeCoercerFactory()
-                .typeCoercerForType(StringWithMacros.class)
-                .coerce(
-                    cellPathResolver,
-                    filesystem,
-                    rule.getBuildTarget().getBasePath(),
-                    EmptyTargetConfiguration.INSTANCE,
-                    input);
+        new DefaultTypeCoercerFactory()
+            .typeCoercerForType(TypeToken.of(StringWithMacros.class))
+            .coerceBoth(
+                cellNameResolver,
+                filesystem,
+                rule.getBuildTarget().getCellRelativeBasePath().getPath(),
+                UnconfiguredTargetConfiguration.INSTANCE,
+                UnconfiguredTargetConfiguration.INSTANCE,
+                input);
     Arg arg = converter.convert(stringWithMacros);
     return Arg.stringify(arg, graphBuilder.getSourcePathResolver());
   }
